--- a/Output/tabS8.tex
+++ b/Output/tabS8.tex
@@ -2,47 +2,47 @@
 
 \caption{\label{tab:S8}Child deaths experienced by women in birth cohort c at exact age a. Obtained by weighting the first difference of child death by the life table distribution of women. Regional values include point estimate and standard deviation, in hundreds of thousands.}
 \centering
-\begin{tabular}[t]{lllllll}
+\begin{tabular}[t]{llllllllll}
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
 \cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
-Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
+Age & 25 & 70 & 99 & 25 & 70 & 99 & 25 & 70 & 99\\
 \midrule
-australia\_new zealand & 2.19 (0.1) & 2.03 (0.1) & 1.95 (0.1) & 1.92 (0) & 1.85 (0) & 1.77 (0)\\
-australia & 2.07 & 1.95 & 1.89 & 1.89 & 1.83 & 1.77\\
-new zealand & 2.3 & 2.1 & 2.01 & 1.94 & 1.87 & 1.78\\
-central and southern asia & 4.02 (1.1) & 3.54 (1.1) & 2.82 (0.6) & 2.42 (0.4) & 2.17 (0.7) & 2.01 (0.7)\\
-afghanistan & 4.07 & 5.14 & 5.38 & 4.92 & 3.93 & 3.09\\
+australia\_new zealand & 0.01 (0) & 0.02 (0.01) & 0.02 (0.01) & 0 (0) & 0.01 (0) & 0.01 (0) & 0 (0) & 0.01 (0) & 0.01 (0)\\
+australia & 0.01 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01\\
+new zealand & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+central and southern asia & 19.02 (0.51) & 3.98 (0.06) & 0.52 (0.01) & 11.17 (0.39) & 5.48 (0.12) & 1.35 (0.02) & 4.86 (0.15) & 4.37 (0.12) & 2.03 (0.06)\\
+afghanistan & 0.47 & 0.07 & <0.01 & 0.5 & 0.16 & 0.01 & 0.23 & 0.17 & 0.03\\
 \addlinespace
-bangladesh & 4.12 & 3.43 & 2.75 & 2.16 & 1.78 & 1.6\\
-bhutan & 4.18 & 3.95 & 3.15 & 2.39 & 1.9 & 1.68\\
-india & 3.33 & 3.07 & 2.79 & 2.46 & 2.24 & 2.01\\
-iran (islamic republic of) & 4.74 & 3.93 & 2.5 & 1.92 & 1.96 & 1.98\\
-kazakhstan & 2.44 & 2.23 & 2.13 & 2.25 & 2.41 & 2.35\\
+bangladesh & 1.99 & 0.31 & 0.11 & 0.79 & 0.37 & 0.26 & 0.2 & 0.24 & 0.32\\
+bhutan & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+india & 13.65 & 2.95 & 0.34 & 7.52 & 3.93 & 0.9 & 2.87 & 2.95 & 1.38\\
+iran (islamic republic of) & 0.58 & 0.08 & 0.02 & 0.12 & 0.08 & 0.07 & 0.03 & 0.04 & 0.08\\
+kazakhstan & 0.08 & 0.05 & 0.01 & 0.04 & 0.06 & 0.02 & 0.01 & 0.03 & 0.02\\
 \addlinespace
-kyrgyzstan & 3.37 & 3.1 & 2.81 & 2.63 & 2.67 & 2.51\\
-maldives & 5.1 & 4.84 & 3.4 & 2.19 & 1.86 & 1.69\\
-nepal & 3.63 & 3.64 & 3.2 & 2.48 & 1.81 & 1.51\\
-pakistan & 4.89 & 4.65 & 4.1 & 3.39 & 2.92 & 2.63\\
-sri lanka & 2.95 & 2.47 & 2.08 & 2.04 & 1.97 & 1.9\\
+kyrgyzstan & 0.03 & 0.01 & <0.01 & 0.02 & 0.02 & 0.01 & 0.01 & 0.02 & 0.01\\
+maldives & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+nepal & 0.4 & 0.05 & <0.01 & 0.16 & 0.07 & 0.02 & 0.04 & 0.05 & 0.04\\
+pakistan & 1.4 & 0.31 & 0.01 & 1.78 & 0.63 & 0.03 & 1.39 & 0.74 & 0.08\\
+sri lanka & 0.08 & 0.05 & 0.01 & 0.02 & 0.03 & 0.02 & 0.01 & 0.02 & 0.03\\
 \addlinespace
-tajikistan & 4.64 & 4.4 & 3.58 & 2.96 & 2.85 & 2.82\\
-turkmenistan & 3.97 & 3.36 & 2.7 & 2.45 & 2.47 & 2.29\\
-uzbekistan & 3.9 & 3.29 & 2.83 & 2.33 & 2.11 & 2\\
-eastern and south-eastern asia & 3.03 (1.5) & 2.74 (1.4) & 2.03 (1) & 1.81 (0.9) & 1.83 (0.7) & 1.75 (0.5)\\
-brunei darussalam & 4.08 & 3.21 & 2.33 & 1.91 & 1.78 & 1.64\\
+tajikistan & 0.07 & 0.02 & <0.01 & 0.05 & 0.02 & <0.01 & 0.02 & 0.03 & 0.01\\
+turkmenistan & 0.04 & 0.02 & <0.01 & 0.03 & 0.02 & <0.01 & 0.02 & 0.02 & <0.01\\
+uzbekistan & 0.19 & 0.06 & <0.01 & 0.12 & 0.09 & 0.02 & 0.04 & 0.07 & 0.02\\
+eastern and south-eastern asia & 12.79 (0.47) & 4.34 (0.16) & 1.93 (0.07) & 3.89 (0.11) & 2.92 (0.13) & 2.22 (0.1) & 1.18 (0.05) & 1.85 (0.08) & 2.31 (0.07)\\
+brunei darussalam & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
 \addlinespace
-cambodia & 3.73 & 3.88 & 3.28 & 2.41 & 2.08 & 1.93\\
-china & 2.68 & 2.03 & 1.75 & 1.62 & 1.67 & 1.73\\
-china, hong kong sar & 2.19 & 1.45 & 1.1 & 1.22 & 1.45 & 1.56\\
-china, macao sar & 1.43 & 1.79 & 1.11 & 1.01 & 1.18 & 1.31\\
-china, taiwan province of china & 2.47 & 1.99 & 1.61 & 1.34 & 1.34 & 1.42\\
+cambodia & 0.6 & 0.03 & <0.01 & 0.07 & 0.03 & 0.01 & 0.03 & 0.04 & 0.02\\
+china & 7.83 & 2.41 & 1.28 & 2.04 & 1.22 & 1.41 & 0.44 & 0.65 & 1.43\\
+china, hong kong sar & 0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+china, macao sar & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+china, taiwan province of china & 0.03 & 0.06 & 0.04 & 0.01 & 0.02 & 0.03 & <0.01 & 0.01 & 0.01\\
 \addlinespace
-dem people's republic of korea & 2.38 & 2.28 & 1.92 & 1.81 & 1.83 & 1.77\\
-indonesia & 3.55 & 2.91 & 2.33 & 2.13 & 2.05 & 1.92\\
-japan & 1.86 & 1.7 & 1.41 & 1.39 & 1.45 & 1.47\\
-lao people's democratic republic & 4.39 & 4.31 & 3.54 & 2.72 & 2.27 & 2.03\\
-... & ... & ... & ... & ... & ... & ...\\
+dem people's republic of korea & 0.07 & 0.03 & 0.01 & 0.07 & 0.03 & 0.01 & 0.02 & 0.02 & 0.02\\
+indonesia & 1.87 & 0.61 & 0.06 & 0.74 & 0.58 & 0.16 & 0.27 & 0.43 & 0.27\\
+japan & 0.1 & 0.13 & 0.18 & 0.02 & 0.05 & 0.11 & <0.01 & 0.02 & 0.06\\
+lao people's democratic republic & 0.09 & 0.02 & <0.01 & 0.06 & 0.02 & <0.01 & 0.02 & 0.02 & 0.01\\
+... & ... & ... & ... & ... & ... & ... & ... & ... & ...\\
 \bottomrule
 \end{tabular}
 \end{table}
