formatted tables from SI

--- a/Output/tabS5.tex
+++ b/Output/tabS5.tex
@@ -1,48 +1,273 @@
-\begin{table}[!h]
+\begingroup\fontsize{7}{9}\selectfont
 
-\caption{\label{tab:S5}Full country results for the cumulative number of child deaths for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis.}
-\centering
-\begin{tabular}[t]{llllllllll}
+\begin{longtable}[t]{llllllllll}
+\caption{\label{tab:S5}Full country results for the cumulative number of child deaths for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis.}\\
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
 \cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
 Age & 20 & 45 & 100 & 20 & 45 & 100 & 20 & 45 & 100\\
 \midrule
-australia\_new zealand & 0.01 (0) & 0.07 (0) & 0.55 (0.1) & 0 (0) & 0.02 (0) & 0.23 (0) & 0 (0) & 0.01 (0) & 0.12 (0)\\
-australia & 0.01 & 0.06 & 0.49 & <0.01 & 0.02 & 0.21 & <0.01 & 0.01 & 0.1\\
-new zealand & 0.02 & 0.08 & 0.62 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.13\\
-central and southern asia & 0.23 (0.2) & 1.04 (0.8) & 2.76 (0.9) & 0.09 (0.1) & 0.3 (0.2) & 1.43 (0.6) & 0.02 (0) & 0.06 (0.1) & 0.73 (0.5)\\
-afghanistan & 0.41 & 2.19 & 4.61 & 0.21 & 0.95 & 3.36 & 0.06 & 0.23 & 1.5\\
-\addlinespace
-bangladesh & 0.37 & 1.47 & 3.12 & 0.12 & 0.32 & 1.17 & 0.02 & 0.06 & 0.51\\
-bhutan & 0.31 & 1.7 & 3.42 & 0.11 & 0.34 & 1.35 & 0.01 & 0.06 & 0.52\\
-india & 0.23 & 1 & 2.65 & 0.11 & 0.35 & 1.56 & 0.02 & 0.09 & 0.79\\
-iran (islamic republic of) & 0.25 & 0.97 & 2.31 & 0.03 & 0.1 & 0.59 & 0.01 & 0.03 & 0.32\\
-kazakhstan & 0.07 & 0.33 & 1.54 & 0.04 & 0.13 & 0.93 & 0.01 & 0.03 & 0.68\\
-\addlinespace
-kyrgyzstan & 0.12 & 0.52 & 2.28 & 0.06 & 0.18 & 1.34 & 0.01 & 0.06 & 0.88\\
-maldives & 0.44 & 1.47 & 2.64 & 0.07 & 0.16 & 0.68 & <0.01 & 0.01 & 0.21\\
-nepal & 0.31 & 1.42 & 2.97 & 0.13 & 0.36 & 1.52 & 0.02 & 0.06 & 0.58\\
-pakistan & 0.22 & 1.23 & 3.52 & 0.12 & 0.57 & 2.34 & 0.05 & 0.23 & 1.36\\
-sri lanka & 0.05 & 0.25 & 1.21 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.34\\
-\addlinespace
-tajikistan & 0.2 & 1.08 & 3.31 & 0.11 & 0.36 & 1.65 & 0.03 & 0.1 & 1.12\\
-turkmenistan & 0.13 & 0.71 & 2.87 & 0.06 & 0.27 & 1.57 & 0.03 & 0.14 & 1.14\\
-uzbekistan & 0.12 & 0.6 & 2.57 & 0.07 & 0.22 & 1.5 & 0.02 & 0.07 & 0.86\\
-eastern and south-eastern asia & 0.06 (0.1) & 0.34 (0.7) & 1.6 (1.9) & 0.01 (0) & 0.08 (0.2) & 0.69 (0.9) & 0 (0) & 0.02 (0.1) & 0.33 (0.6)\\
-brunei darussalam & 0.06 & 0.22 & 1.73 & 0.01 & 0.04 & 0.61 & <0.01 & 0.02 & 0.33\\
-\addlinespace
-cambodia & 0.19 & 1.98 & 3.54 & 0.1 & 0.39 & 1.52 & 0.02 & 0.08 & 0.79\\
-china & 0.11 & 0.35 & 1.35 & 0.02 & 0.08 & 0.52 & <0.01 & 0.02 & 0.32\\
-china, hong kong sar & 0.01 & 0.06 & 0.45 & <0.01 & 0.01 & 0.12 & <0.01 & <0.01 & 0.09\\
-china, macao sar & 0.01 & 0.05 & 0.26 & <0.01 & 0.01 & 0.11 & <0.01 & 0.01 & 0.09\\
-china, taiwan province of china & 0.03 & 0.11 & 0.85 & <0.01 & 0.02 & 0.3 & <0.01 & 0.01 & 0.14\\
-\addlinespace
-dem people's republic of korea & 0.03 & 0.19 & 1.29 & 0.01 & 0.13 & 0.71 & <0.01 & 0.04 & 0.43\\
-indonesia & 0.21 & 0.76 & 2.4 & 0.04 & 0.16 & 0.93 & 0.01 & 0.06 & 0.59\\
-japan & 0.01 & 0.04 & 0.37 & <0.01 & 0.01 & 0.15 & <0.01 & <0.01 & 0.09\\
-lao people's democratic republic & 0.24 & 1.41 & 3.45 & 0.14 & 0.48 & 1.84 & 0.03 & 0.11 & 0.89\\
-... & ... & ... & ... & ... & ... & ... & ... & ... & ...\\
+\endfirsthead
+\caption[]{Full country results for the cumulative number of child deaths for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis. \textit{(continued)}}\\
+\toprule
+\multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
+\cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
+Age & 20 & 45 & 100 & 20 & 45 & 100 & 20 & 45 & 100\\
+\midrule
+\endhead
+\
+\endfoot
 \bottomrule
-\end{tabular}
-\end{table}
+\endlastfoot
+Australia/New Zealand & 0.01 (0) & 0.07 (0) & 0.55 (0.1) & 0 (0) & 0.02 (0) & 0.23 (0) & 0 (0) & 0.01 (0) & 0.12 (0)\\
+Australia & 0.01 & 0.06 & 0.49 & <0.01 & 0.02 & 0.21 & <0.01 & 0.01 & 0.1\\
+New Zealand & 0.02 & 0.08 & 0.62 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.13\\
+Central and Southern Asia & 0.23 (0.2) & 1.04 (0.8) & 2.76 (0.9) & 0.09 (0.1) & 0.3 (0.2) & 1.43 (0.6) & 0.02 (0) & 0.06 (0.1) & 0.73 (0.5)\\
+Afghanistan & 0.41 & 2.19 & 4.61 & 0.21 & 0.95 & 3.36 & 0.06 & 0.23 & 1.5\\
+\addlinespace
+Bangladesh & 0.37 & 1.47 & 3.12 & 0.12 & 0.32 & 1.17 & 0.02 & 0.06 & 0.51\\
+Bhutan & 0.31 & 1.7 & 3.42 & 0.11 & 0.34 & 1.35 & 0.01 & 0.06 & 0.52\\
+India & 0.23 & 1 & 2.65 & 0.11 & 0.35 & 1.56 & 0.02 & 0.09 & 0.79\\
+Iran (Islamic Republic of) & 0.25 & 0.97 & 2.31 & 0.03 & 0.1 & 0.59 & 0.01 & 0.03 & 0.32\\
+Kazakhstan & 0.07 & 0.33 & 1.54 & 0.04 & 0.13 & 0.93 & 0.01 & 0.03 & 0.68\\
+\addlinespace
+Kyrgyzstan & 0.12 & 0.52 & 2.28 & 0.06 & 0.18 & 1.34 & 0.01 & 0.06 & 0.88\\
+Maldives & 0.44 & 1.47 & 2.64 & 0.07 & 0.16 & 0.68 & <0.01 & 0.01 & 0.21\\
+Nepal & 0.31 & 1.42 & 2.97 & 0.13 & 0.36 & 1.52 & 0.02 & 0.06 & 0.58\\
+Pakistan & 0.22 & 1.23 & 3.52 & 0.12 & 0.57 & 2.34 & 0.05 & 0.23 & 1.36\\
+Sri Lanka & 0.05 & 0.25 & 1.21 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.34\\
+\addlinespace
+Tajikistan & 0.2 & 1.08 & 3.31 & 0.11 & 0.36 & 1.65 & 0.03 & 0.1 & 1.12\\
+Turkmenistan & 0.13 & 0.71 & 2.87 & 0.06 & 0.27 & 1.57 & 0.03 & 0.14 & 1.14\\
+Uzbekistan & 0.12 & 0.6 & 2.57 & 0.07 & 0.22 & 1.5 & 0.02 & 0.07 & 0.86\\
+Eastern and South-Eastern Asia & 0.06 (0.1) & 0.34 (0.7) & 1.6 (1.9) & 0.01 (0) & 0.08 (0.2) & 0.69 (0.9) & 0 (0) & 0.02 (0.1) & 0.33 (0.6)\\
+Brunei Darussalam & 0.06 & 0.22 & 1.73 & 0.01 & 0.04 & 0.61 & <0.01 & 0.02 & 0.33\\
+\addlinespace
+Cambodia & 0.19 & 1.98 & 3.54 & 0.1 & 0.39 & 1.52 & 0.02 & 0.08 & 0.79\\
+China & 0.11 & 0.35 & 1.35 & 0.02 & 0.08 & 0.52 & <0.01 & 0.02 & 0.32\\
+China, Hong Kong SAR & 0.01 & 0.06 & 0.45 & <0.01 & 0.01 & 0.12 & <0.01 & <0.01 & 0.09\\
+China, Macao SAR & 0.01 & 0.05 & 0.26 & <0.01 & 0.01 & 0.11 & <0.01 & 0.01 & 0.09\\
+China, Taiwan Province of China & 0.03 & 0.11 & 0.85 & <0.01 & 0.02 & 0.3 & <0.01 & 0.01 & 0.14\\
+\addlinespace
+Dem. People's Republic of Korea & 0.03 & 0.19 & 1.29 & 0.01 & 0.13 & 0.71 & <0.01 & 0.04 & 0.43\\
+Indonesia & 0.21 & 0.76 & 2.4 & 0.04 & 0.16 & 0.93 & 0.01 & 0.06 & 0.59\\
+Japan & 0.01 & 0.04 & 0.37 & <0.01 & 0.01 & 0.15 & <0.01 & <0.01 & 0.09\\
+Lao People's Democratic Republic & 0.24 & 1.41 & 3.45 & 0.14 & 0.48 & 1.84 & 0.03 & 0.11 & 0.89\\
+Malaysia & 0.05 & 0.21 & 1.6 & 0.01 & 0.04 & 0.69 & <0.01 & 0.02 & 0.33\\
+\addlinespace
+Mongolia & 0.14 & 0.97 & 2.95 & 0.05 & 0.17 & 1.11 & 0.01 & 0.06 & 0.79\\
+Myanmar & 0.17 & 0.94 & 2.96 & 0.05 & 0.26 & 1.28 & 0.02 & 0.1 & 0.77\\
+Philippines & 0.07 & 0.49 & 2.37 & 0.03 & 0.18 & 1.39 & 0.01 & 0.08 & 0.72\\
+Republic of Korea & 0.04 & 0.18 & 0.7 & <0.01 & 0.02 & 0.2 & <0.01 & <0.01 & 0.07\\
+Singapore & 0.01 & 0.06 & 0.49 & <0.01 & 0.01 & 0.17 & <0.01 & <0.01 & 0.09\\
+\addlinespace
+Thailand & 0.08 & 0.34 & 1.33 & 0.01 & 0.06 & 0.47 & <0.01 & 0.02 & 0.28\\
+Timor-Leste & 0.25 & 1.89 & 3.32 & 0.14 & 0.59 & 2.23 & 0.03 & 0.15 & 1.07\\
+Viet Nam & 0.05 & 0.41 & 1.75 & 0.02 & 0.1 & 0.7 & 0.01 & 0.06 & 0.53\\
+Europe and Northern America & 0.01 (0) & 0.07 (0) & 0.59 (0.4) & 0 (0) & 0.02 (0) & 0.28 (0.3) & 0 (0) & 0.01 (0) & 0.16 (0.2)\\
+Albania & 0.08 & 0.3 & 1.24 & 0.02 & 0.07 & 0.51 & <0.01 & 0.02 & 0.25\\
+\addlinespace
+Austria & 0.02 & 0.06 & 0.48 & <0.01 & 0.01 & 0.23 & <0.01 & 0.01 & 0.13\\
+Belarus & 0.01 & 0.08 & 0.9 & 0.01 & 0.03 & 0.56 & <0.01 & 0.01 & 0.42\\
+Belgium & 0.01 & 0.05 & 0.47 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.14\\
+Bosnia and Herzegovina & 0.05 & 0.15 & 0.9 & 0.01 & 0.03 & 0.42 & <0.01 & 0.01 & 0.2\\
+Bulgaria & 0.03 & 0.08 & 0.95 & 0.01 & 0.04 & 0.54 & <0.01 & 0.02 & 0.38\\
+\addlinespace
+Canada & 0.01 & 0.05 & 0.45 & <0.01 & 0.02 & 0.22 & <0.01 & 0.01 & 0.11\\
+Channel Islands & 0.01 & 0.05 & 0.35 & <0.01 & 0.02 & 0.19 & <0.01 & 0.01 & 0.12\\
+Croatia & 0.02 & 0.07 & 0.64 & <0.01 & 0.02 & 0.36 & <0.01 & 0.01 & 0.18\\
+Czechia & 0.02 & 0.06 & 0.7 & <0.01 & 0.02 & 0.36 & <0.01 & 0.01 & 0.21\\
+Denmark & 0.01 & 0.04 & 0.53 & <0.01 & 0.01 & 0.29 & <0.01 & 0.01 & 0.16\\
+\addlinespace
+Estonia & 0.01 & 0.08 & 0.69 & 0.01 & 0.03 & 0.43 & <0.01 & 0.01 & 0.25\\
+Finland & 0.01 & 0.03 & 0.41 & <0.01 & 0.01 & 0.25 & <0.01 & <0.01 & 0.12\\
+France & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.26 & <0.01 & 0.01 & 0.16\\
+Germany & 0.01 & 0.05 & 0.45 & <0.01 & 0.01 & 0.22 & <0.01 & 0.01 & 0.14\\
+Greece & 0.02 & 0.07 & 0.53 & <0.01 & 0.01 & 0.21 & <0.01 & 0.01 & 0.11\\
+\addlinespace
+Hungary & 0.03 & 0.08 & 0.81 & 0.01 & 0.02 & 0.46 & <0.01 & 0.01 & 0.27\\
+Iceland & 0.01 & 0.05 & 0.57 & <0.01 & 0.01 & 0.25 & <0.01 & <0.01 & 0.1\\
+Ireland & 0.01 & 0.07 & 0.6 & <0.01 & 0.02 & 0.21 & <0.01 & 0.01 & 0.1\\
+Italy & 0.02 & 0.06 & 0.4 & <0.01 & 0.01 & 0.13 & <0.01 & <0.01 & 0.07\\
+Latvia & 0.01 & 0.08 & 0.81 & 0.01 & 0.04 & 0.54 & <0.01 & 0.01 & 0.41\\
+\addlinespace
+Lithuania & 0.01 & 0.08 & 0.85 & 0.01 & 0.03 & 0.56 & <0.01 & 0.01 & 0.39\\
+Luxembourg & 0.01 & 0.05 & 0.4 & <0.01 & 0.01 & 0.21 & <0.01 & 0.01 & 0.09\\
+Malta & 0.01 & 0.05 & 0.4 & <0.01 & 0.02 & 0.23 & <0.01 & 0.01 & 0.13\\
+Montenegro & 0.03 & 0.11 & 0.92 & 0.01 & 0.03 & 0.51 & <0.01 & 0.01 & 0.29\\
+Netherlands & 0.01 & 0.04 & 0.43 & <0.01 & 0.01 & 0.2 & <0.01 & 0.01 & 0.12\\
+\addlinespace
+North Macedonia & 0.06 & 0.2 & 1.09 & 0.02 & 0.04 & 0.6 & <0.01 & 0.02 & 0.28\\
+Norway & 0.01 & 0.04 & 0.47 & <0.01 & 0.01 & 0.25 & <0.01 & 0.01 & 0.12\\
+Poland & 0.02 & 0.09 & 0.75 & 0.01 & 0.03 & 0.41 & <0.01 & 0.01 & 0.24\\
+Portugal & 0.04 & 0.13 & 0.56 & <0.01 & 0.01 & 0.21 & <0.01 & <0.01 & 0.1\\
+Republic of Moldova & 0.03 & 0.15 & 1.22 & 0.02 & 0.06 & 0.79 & <0.01 & 0.02 & 0.43\\
+\addlinespace
+Romania & 0.04 & 0.14 & 1.02 & 0.01 & 0.04 & 0.48 & <0.01 & 0.02 & 0.34\\
+Russian Federation & 0.02 & 0.1 & 0.96 & 0.01 & 0.05 & 0.63 & <0.01 & 0.02 & 0.53\\
+Serbia & 0.05 & 0.14 & 0.99 & 0.01 & 0.04 & 0.56 & <0.01 & 0.01 & 0.26\\
+Slovakia & 0.02 & 0.08 & 0.88 & 0.01 & 0.03 & 0.45 & <0.01 & 0.01 & 0.25\\
+Slovenia & 0.01 & 0.05 & 0.54 & <0.01 & 0.01 & 0.25 & <0.01 & 0.01 & 0.14\\
+\addlinespace
+Spain & 0.01 & 0.06 & 0.45 & <0.01 & 0.01 & 0.13 & <0.01 & <0.01 & 0.08\\
+Sweden & 0.01 & 0.03 & 0.4 & <0.01 & 0.01 & 0.21 & <0.01 & 0.01 & 0.11\\
+Switzerland & 0.01 & 0.04 & 0.34 & <0.01 & 0.01 & 0.15 & <0.01 & 0.01 & 0.08\\
+Ukraine & 0.02 & 0.08 & 0.99 & 0.01 & 0.04 & 0.64 & <0.01 & 0.02 & 0.46\\
+United Kingdom & 0.01 & 0.05 & 0.53 & <0.01 & 0.02 & 0.28 & <0.01 & 0.01 & 0.17\\
+\addlinespace
+United States of America & 0.02 & 0.06 & 0.64 & <0.01 & 0.03 & 0.48 & <0.01 & 0.02 & 0.31\\
+Latin America and the Caribbean & 0.08 (0.1) & 0.3 (0.3) & 1.66 (1.1) & 0.02 (0) & 0.08 (0.1) & 0.7 (0.5) & 0.01 (0) & 0.04 (0) & 0.43 (0.2)\\
+Antigua and Barbuda & 0.05 & 0.15 & 1.07 & 0.01 & 0.05 & 0.59 & <0.01 & 0.02 & 0.4\\
+Argentina & 0.04 & 0.18 & 1.11 & 0.02 & 0.07 & 0.68 & 0.01 & 0.03 & 0.41\\
+Aruba & 0.03 & 0.1 & 0.94 & 0.01 & 0.05 & 0.52 & <0.01 & 0.04 & 0.38\\
+\addlinespace
+Bahamas & 0.02 & 0.14 & 1.34 & 0.01 & 0.06 & 0.8 & <0.01 & 0.02 & 0.45\\
+Barbados & 0.04 & 0.12 & 0.78 & 0.01 & 0.04 & 0.4 & <0.01 & 0.03 & 0.29\\
+Belize & 0.14 & 0.49 & 2.49 & 0.04 & 0.14 & 1.2 & 0.01 & 0.05 & 0.55\\
+Bolivia (Plurinational State of) & 0.26 & 1.39 & 2.8 & 0.11 & 0.44 & 1.45 & 0.03 & 0.13 & 0.71\\
+Brazil & 0.11 & 0.46 & 1.55 & 0.03 & 0.11 & 0.67 & 0.01 & 0.03 & 0.35\\
+\addlinespace
+Chile & 0.08 & 0.22 & 0.91 & 0.01 & 0.04 & 0.42 & <0.01 & 0.01 & 0.21\\
+Colombia & 0.1 & 0.37 & 1.42 & 0.02 & 0.09 & 0.65 & 0.01 & 0.04 & 0.34\\
+Costa Rica & 0.08 & 0.23 & 1.05 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.25\\
+Cuba & 0.06 & 0.13 & 0.92 & 0.01 & 0.03 & 0.41 & <0.01 & 0.01 & 0.29\\
+curaçao & 0.03 & 0.11 & 0.84 & 0.01 & 0.05 & 0.5 & <0.01 & 0.02 & 0.28\\
+\addlinespace
+Dominican Republic & 0.19 & 0.6 & 2.08 & 0.05 & 0.16 & 0.99 & 0.02 & 0.08 & 0.61\\
+Ecuador & 0.16 & 0.63 & 1.81 & 0.04 & 0.14 & 0.75 & 0.01 & 0.05 & 0.42\\
+El Salvador & 0.21 & 0.86 & 2.31 & 0.04 & 0.15 & 0.94 & 0.01 & 0.05 & 0.48\\
+French Guiana & 0.07 & 0.24 & 1.09 & 0.02 & 0.08 & 0.71 & 0.01 & 0.03 & 0.38\\
+Grenada & 0.06 & 0.26 & 1.95 & 0.01 & 0.07 & 0.99 & 0.01 & 0.04 & 0.57\\
+\addlinespace
+Guadeloupe & 0.04 & 0.17 & 0.88 & 0.01 & 0.03 & 0.37 & <0.01 & 0.01 & 0.23\\
+Guatemala & 0.24 & 1.05 & 2.66 & 0.08 & 0.28 & 1.29 & 0.02 & 0.08 & 0.56\\
+Guyana & 0.09 & 0.42 & 2.23 & 0.04 & 0.2 & 1.31 & 0.02 & 0.11 & 0.94\\
+Haiti & 0.18 & 1.28 & 3.18 & 0.1 & 0.56 & 1.94 & 0.04 & 0.23 & 1.08\\
+Honduras & 0.25 & 0.97 & 2.58 & 0.06 & 0.23 & 1.21 & 0.01 & 0.06 & 0.52\\
+\addlinespace
+Jamaica & 0.08 & 0.24 & 1.78 & 0.02 & 0.08 & 0.88 & 0.01 & 0.04 & 0.51\\
+Martinique & 0.04 & 0.14 & 0.7 & 0.01 & 0.03 & 0.3 & <0.01 & 0.01 & 0.17\\
+Mexico & 0.13 & 0.47 & 2.02 & 0.03 & 0.1 & 0.82 & 0.01 & 0.04 & 0.47\\
+Nicaragua & 0.25 & 0.99 & 2.67 & 0.06 & 0.17 & 1 & 0.01 & 0.06 & 0.51\\
+Panama & 0.09 & 0.31 & 1.4 & 0.02 & 0.11 & 0.69 & 0.01 & 0.06 & 0.45\\
+\addlinespace
+Paraguay & 0.08 & 0.42 & 2.05 & 0.03 & 0.16 & 1.16 & 0.01 & 0.06 & 0.61\\
+Peru & 0.2 & 0.8 & 1.96 & 0.04 & 0.14 & 0.7 & 0.01 & 0.04 & 0.36\\
+Puerto Rico & 0.03 & 0.1 & 0.82 & 0.01 & 0.04 & 0.44 & <0.01 & 0.01 & 0.21\\
+Saint Lucia & 0.11 & 0.31 & 1.82 & 0.02 & 0.06 & 0.7 & 0.01 & 0.03 & 0.31\\
+Saint Vincent and the Grenadines & 0.14 & 0.4 & 2.24 & 0.02 & 0.08 & 0.93 & 0.01 & 0.04 & 0.55\\
+\addlinespace
+Suriname & 0.1 & 0.37 & 2.3 & 0.04 & 0.14 & 1.26 & 0.01 & 0.05 & 0.73\\
+Trinidad and Tobago & 0.05 & 0.21 & 1.47 & 0.02 & 0.08 & 0.68 & 0.01 & 0.05 & 0.47\\
+United States Virgin Islands & 0.06 & 0.16 & 1.15 & 0.01 & 0.04 & 0.45 & <0.01 & 0.02 & 0.25\\
+Uruguay & 0.03 & 0.15 & 0.95 & 0.01 & 0.05 & 0.57 & <0.01 & 0.02 & 0.36\\
+Venezuela (Bolivarian Republic of) & 0.08 & 0.29 & 1.94 & 0.02 & 0.1 & 1.03 & 0.02 & 0.08 & 0.67\\
+\addlinespace
+Northern Africa and Western Asia & 0.16 (0.1) & 0.7 (0.7) & 2.4 (1) & 0.02 (0) & 0.11 (0.1) & 0.74 (0.5) & 0 (0) & 0.03 (0) & 0.38 (0.3)\\
+Algeria & 0.25 & 1.09 & 2.52 & 0.02 & 0.13 & 0.62 & 0.01 & 0.06 & 0.39\\
+Armenia & 0.06 & 0.19 & 1.18 & 0.04 & 0.09 & 0.74 & <0.01 & 0.03 & 0.45\\
+Azerbaijan & 0.11 & 0.51 & 1.88 & 0.07 & 0.18 & 0.96 & 0.02 & 0.06 & 0.66\\
+Bahrain & 0.1 & 0.29 & 1.76 & 0.01 & 0.04 & 0.61 & <0.01 & 0.02 & 0.32\\
+\addlinespace
+Cyprus & 0.02 & 0.07 & 0.59 & <0.01 & 0.02 & 0.32 & <0.01 & 0.01 & 0.13\\
+Egypt & 0.32 & 1.18 & 3.03 & 0.06 & 0.19 & 1.36 & 0.01 & 0.07 & 0.9\\
+Georgia & 0.04 & 0.14 & 1.07 & 0.03 & 0.08 & 0.7 & 0.01 & 0.03 & 0.54\\
+Iraq & 0.16 & 0.76 & 3.35 & 0.04 & 0.24 & 1.75 & 0.02 & 0.11 & 1.12\\
+Israel & 0.02 & 0.09 & 0.72 & <0.01 & 0.03 & 0.37 & <0.01 & 0.01 & 0.21\\
+\addlinespace
+Jordan & 0.12 & 0.55 & 2.71 & 0.02 & 0.13 & 1.19 & 0.01 & 0.04 & 0.53\\
+Kuwait & 0.11 & 0.32 & 2.4 & 0.01 & 0.05 & 0.72 & <0.01 & 0.02 & 0.37\\
+Lebanon & 0.05 & 0.24 & 1.2 & 0.01 & 0.05 & 0.49 & <0.01 & 0.02 & 0.26\\
+Libya & 0.22 & 0.82 & 3.4 & 0.01 & 0.09 & 0.78 & <0.01 & 0.03 & 0.38\\
+Morocco & 0.23 & 0.98 & 2.16 & 0.03 & 0.14 & 0.55 & 0.01 & 0.04 & 0.3\\
+\addlinespace
+Oman & 0.22 & 0.99 & 2.5 & 0.03 & 0.11 & 0.85 & <0.01 & 0.02 & 0.32\\
+Qatar & 0.09 & 0.34 & 1.94 & 0.01 & 0.05 & 0.68 & <0.01 & 0.01 & 0.24\\
+Saudi Arabia & 0.23 & 0.85 & 2.7 & 0.02 & 0.11 & 1.04 & <0.01 & 0.02 & 0.35\\
+State of Palestine & 0.16 & 0.77 & 2.91 & 0.05 & 0.19 & 1.63 & 0.01 & 0.07 & 0.75\\
+Sudan & 0.21 & 1.38 & 4.03 & 0.12 & 0.65 & 2.52 & 0.04 & 0.29 & 1.65\\
+\addlinespace
+Syrian Arab Republic & 0.16 & 0.61 & 2.61 & 0.02 & 0.15 & 0.98 & 0.01 & 0.03 & 0.43\\
+Tunisia & 0.18 & 0.7 & 1.92 & 0.01 & 0.07 & 0.49 & <0.01 & 0.02 & 0.28\\
+Turkey & 0.26 & 0.93 & 1.92 & 0.05 & 0.15 & 0.62 & <0.01 & 0.03 & 0.28\\
+United Arab Emirates & 0.16 & 0.41 & 1.99 & 0.01 & 0.04 & 0.58 & <0.01 & 0.01 & 0.19\\
+Western Sahara & 0.33 & 1.39 & 3.24 & 0.06 & 0.25 & 1.12 & 0.01 & 0.07 & 0.53\\
+\addlinespace
+Yemen & 0.46 & 2.06 & 4.74 & 0.15 & 0.62 & 3.09 & 0.04 & 0.19 & 1.42\\
+Oceania (exc. AUS and NZ) & 0.09 (0) & 0.49 (0.3) & 2.58 (0.8) & 0.02 (0) & 0.14 (0.1) & 1.64 (0.8) & 0.01 (0) & 0.09 (0.1) & 1.02 (0.6)\\
+Fiji & 0.06 & 0.28 & 2.34 & 0.02 & 0.14 & 1.64 & 0.01 & 0.09 & 1.09\\
+French Polynesia & 0.1 & 0.34 & 1.62 & 0.01 & 0.04 & 0.59 & <0.01 & 0.01 & 0.3\\
+Guam & 0.06 & 0.21 & 1.07 & 0.02 & 0.06 & 0.56 & <0.01 & 0.02 & 0.28\\
+\addlinespace
+Kiribati & 0.11 & 0.76 & 2.58 & 0.06 & 0.36 & 1.72 & 0.02 & 0.17 & 1.02\\
+Micronesia (Fed. States of) & 0.09 & 0.53 & 3.49 & 0.04 & 0.25 & 2.09 & 0.01 & 0.1 & 1.13\\
+New Caledonia & 0.09 & 0.3 & 1.41 & 0.01 & 0.07 & 0.57 & <0.01 & 0.03 & 0.27\\
+Papua New Guinea & 0.15 & 0.83 & 3.38 & 0.07 & 0.41 & 2.37 & 0.03 & 0.18 & 1.53\\
+Samoa & 0.09 & 0.49 & 2.69 & 0.02 & 0.13 & 1.41 & 0.01 & 0.06 & 0.81\\
+\addlinespace
+Solomon Islands & 0.11 & 0.56 & 2.65 & 0.03 & 0.19 & 1.68 & 0.02 & 0.1 & 1.09\\
+Tonga & 0.04 & 0.25 & 2.48 & 0.01 & 0.11 & 1.6 & 0.01 & 0.06 & 1\\
+Vanuatu & 0.12 & 0.56 & 2.84 & 0.03 & 0.17 & 1.8 & 0.02 & 0.09 & 1.15\\
+Sub-Saharan Africa & 0.27 (0.2) & 1.69 (1) & 4.22 (0.9) & 0.18 (0.1) & 0.88 (0.6) & 2.66 (1.1) & 0.06 (0) & 0.26 (0.2) & 1.7 (0.8)\\
+Angola & 0.46 & 2.3 & 5.08 & 0.35 & 1.41 & 3.86 & 0.09 & 0.41 & 2.36\\
+\addlinespace
+Benin & 0.27 & 1.83 & 4.1 & 0.19 & 0.97 & 3.07 & 0.08 & 0.46 & 2.14\\
+Botswana & 0.16 & 0.7 & 3.08 & 0.05 & 0.29 & 1.57 & 0.02 & 0.11 & 0.99\\
+Burkina Faso & 0.41 & 2.18 & 4.59 & 0.24 & 1.2 & 3.29 & 0.08 & 0.37 & 1.96\\
+Burundi & 0.24 & 1.97 & 4.64 & 0.18 & 1.14 & 3.41 & 0.05 & 0.34 & 1.86\\
+Cabo Verde & 0.16 & 0.74 & 2.64 & 0.05 & 0.16 & 1.15 & 0.01 & 0.05 & 0.54\\
+\addlinespace
+Cameroon & 0.3 & 1.45 & 4.18 & 0.22 & 1.01 & 3.36 & 0.08 & 0.4 & 2.09\\
+Central African Republic & 0.34 & 1.59 & 4.34 & 0.21 & 1.17 & 3.54 & 0.12 & 0.55 & 2.44\\
+Chad & 0.38 & 2.06 & 4.79 & 0.32 & 1.67 & 4.62 & 0.15 & 0.76 & 2.92\\
+Comoros & 0.24 & 1.44 & 4.03 & 0.1 & 0.6 & 2.61 & 0.05 & 0.27 & 1.7\\
+Congo & 0.17 & 0.96 & 3.59 & 0.1 & 0.56 & 2.51 & 0.04 & 0.22 & 1.79\\
+\addlinespace
+côte d'ivoire & 0.38 & 1.74 & 5.09 & 0.18 & 0.96 & 3.45 & 0.08 & 0.42 & 2.33\\
+Democratic Republic of the Congo & 0.32 & 1.91 & 4.31 & 0.21 & 1.28 & 3.54 & 0.11 & 0.58 & 2.45\\
+Djibouti & 0.13 & 1.24 & 3.38 & 0.06 & 0.53 & 1.76 & 0.01 & 0.12 & 0.69\\
+Equatorial Guinea & 0.36 & 1.73 & 3.97 & 0.23 & 0.96 & 3.23 & 0.1 & 0.39 & 2.11\\
+Eritrea & 0.24 & 1.67 & 3.85 & 0.13 & 0.53 & 2.27 & 0.03 & 0.14 & 1.24\\
+\addlinespace
+Eswatini & 0.26 & 1.05 & 4.3 & 0.08 & 0.51 & 2.27 & 0.04 & 0.16 & 1.41\\
+Ethiopia & 0.28 & 2.09 & 4.15 & 0.21 & 0.91 & 2.61 & 0.04 & 0.19 & 1.14\\
+Gabon & 0.27 & 1.02 & 3.16 & 0.11 & 0.49 & 2.33 & 0.04 & 0.2 & 1.44\\
+Gambia & 0.43 & 1.83 & 4.17 & 0.17 & 0.86 & 3.24 & 0.05 & 0.34 & 2.04\\
+Ghana & 0.23 & 1.29 & 3.87 & 0.1 & 0.57 & 2.37 & 0.03 & 0.21 & 1.46\\
+\addlinespace
+Guinea & 0.42 & 2.1 & 4.26 & 0.27 & 1.13 & 3.31 & 0.08 & 0.35 & 1.95\\
+Guinea-Bissau & 0.31 & 2.03 & 4.66 & 0.23 & 1.07 & 3.36 & 0.07 & 0.36 & 2.01\\
+Kenya & 0.26 & 1.26 & 4.31 & 0.12 & 0.56 & 2.29 & 0.03 & 0.15 & 1.14\\
+Lesotho & 0.18 & 0.93 & 3.9 & 0.08 & 0.54 & 2.3 & 0.06 & 0.25 & 1.59\\
+Liberia & 0.41 & 2.12 & 4.37 & 0.3 & 1.02 & 2.87 & 0.07 & 0.28 & 1.68\\
+\addlinespace
+Madagascar & 0.31 & 1.71 & 3.98 & 0.17 & 0.63 & 2.27 & 0.04 & 0.17 & 1.27\\
+Malawi & 0.44 & 2.34 & 4.68 & 0.25 & 0.95 & 2.71 & 0.06 & 0.19 & 1.28\\
+Mali & 0.54 & 2.69 & 4.88 & 0.35 & 1.53 & 3.96 & 0.13 & 0.57 & 2.65\\
+Mauritania & 0.22 & 1.26 & 3.71 & 0.1 & 0.66 & 2.59 & 0.05 & 0.33 & 1.78\\
+Mauritius & 0.07 & 0.22 & 1.27 & 0.01 & 0.05 & 0.63 & <0.01 & 0.02 & 0.31\\
+\addlinespace
+Mayotte & 0.13 & 0.44 & 2.18 & 0.01 & 0.06 & 0.89 & <0.01 & 0.02 & 0.45\\
+Mozambique & 0.33 & 2.05 & 4.35 & 0.29 & 1.03 & 3.06 & 0.08 & 0.29 & 1.85\\
+Namibia & 0.16 & 0.86 & 3.64 & 0.06 & 0.34 & 1.88 & 0.03 & 0.14 & 1.28\\
+Niger & 0.51 & 2.96 & 5.23 & 0.44 & 1.69 & 4.08 & 0.12 & 0.51 & 2.68\\
+Nigeria & 0.34 & 1.95 & 4.66 & 0.24 & 1.37 & 3.83 & 0.1 & 0.61 & 2.68\\
+\addlinespace
+réunion & 0.06 & 0.2 & 0.95 & 0.01 & 0.03 & 0.45 & <0.01 & 0.01 & 0.27\\
+Rwanda & 0.25 & 2.75 & 4.8 & 0.31 & 0.91 & 2.14 & 0.02 & 0.12 & 0.9\\
+Sao Tome and Principe & 0.18 & 0.92 & 3.3 & 0.12 & 0.46 & 2.07 & 0.03 & 0.13 & 1.14\\
+Senegal & 0.41 & 1.88 & 4.07 & 0.14 & 0.67 & 2.29 & 0.03 & 0.17 & 1.26\\
+Seychelles & 0.1 & 0.29 & 2.05 & 0.01 & 0.06 & 0.8 & 0.01 & 0.04 & 0.6\\
+\addlinespace
+Sierra Leone & 0.49 & 2.56 & 4.99 & 0.33 & 1.46 & 3.63 & 0.1 & 0.45 & 2.07\\
+Somalia & 0.22 & 2.1 & 4.62 & 0.22 & 1.34 & 3.86 & 0.12 & 0.71 & 2.97\\
+South Africa & 0.14 & 0.64 & 2.92 & 0.04 & 0.24 & 1.51 & 0.02 & 0.09 & 1.04\\
+South Sudan & 0.44 & 2.49 & 4.94 & 0.25 & 1.17 & 3.51 & 0.07 & 0.49 & 2.38\\
+Togo & 0.28 & 1.54 & 4.3 & 0.14 & 0.8 & 2.89 & 0.06 & 0.33 & 1.89\\
+\addlinespace
+Uganda & 0.27 & 1.71 & 4.44 & 0.24 & 1.02 & 3.41 & 0.07 & 0.27 & 1.71\\
+United Republic of Tanzania & 0.28 & 1.59 & 3.99 & 0.19 & 0.75 & 2.57 & 0.06 & 0.25 & 1.61\\
+Zambia & 0.26 & 1.53 & 4.38 & 0.23 & 0.93 & 2.99 & 0.06 & 0.26 & 1.73\\
+Zimbabwe & 0.17 & 0.91 & 4.39 & 0.08 & 0.47 & 2.17 & 0.04 & 0.2 & 1.6\\*
+\end{longtable}
+\endgroup{}
