--- a/Output/tabS8.tex
+++ b/Output/tabS8.tex
@@ -1,48 +1,273 @@
-\begin{table}[!h]
+\begingroup\fontsize{6}{8}\selectfont
 
-\caption{\label{tab:S8}Child deaths experienced by women in birth cohort c at exact age a. Obtained by weighting the first difference of child death by the life table distribution of women. Regional values include point estimate and standard deviation, in hundreds of thousands.}
-\centering
-\begin{tabular}[t]{llllllllll}
+\begin{longtable}[t]{llllllllll}
+\caption{\label{tab:S8}Child deaths experienced by women in birth cohort c at exact age a. Obtained by weighting the first difference of child death by the life table distribution of women. Regional values include point estimate and standard deviation, in hundreds of thousands.}\\
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
 \cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
 Age & 25 & 70 & 99 & 25 & 70 & 99 & 25 & 70 & 99\\
 \midrule
-australia\_new zealand & 0.01 (0) & 0.02 (0.01) & 0.02 (0.01) & 0 (0) & 0.01 (0) & 0.01 (0) & 0 (0) & 0.01 (0) & 0.01 (0)\\
-australia & 0.01 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01\\
-new zealand & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
-central and southern asia & 19.02 (0.51) & 3.98 (0.06) & 0.52 (0.01) & 11.17 (0.39) & 5.48 (0.12) & 1.35 (0.02) & 4.86 (0.15) & 4.37 (0.12) & 2.03 (0.06)\\
-afghanistan & 0.47 & 0.07 & <0.01 & 0.5 & 0.16 & 0.01 & 0.23 & 0.17 & 0.03\\
-\addlinespace
-bangladesh & 1.99 & 0.31 & 0.11 & 0.79 & 0.37 & 0.26 & 0.2 & 0.24 & 0.32\\
-bhutan & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
-india & 13.65 & 2.95 & 0.34 & 7.52 & 3.93 & 0.9 & 2.87 & 2.95 & 1.38\\
-iran (islamic republic of) & 0.58 & 0.08 & 0.02 & 0.12 & 0.08 & 0.07 & 0.03 & 0.04 & 0.08\\
-kazakhstan & 0.08 & 0.05 & 0.01 & 0.04 & 0.06 & 0.02 & 0.01 & 0.03 & 0.02\\
-\addlinespace
-kyrgyzstan & 0.03 & 0.01 & <0.01 & 0.02 & 0.02 & 0.01 & 0.01 & 0.02 & 0.01\\
-maldives & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
-nepal & 0.4 & 0.05 & <0.01 & 0.16 & 0.07 & 0.02 & 0.04 & 0.05 & 0.04\\
-pakistan & 1.4 & 0.31 & 0.01 & 1.78 & 0.63 & 0.03 & 1.39 & 0.74 & 0.08\\
-sri lanka & 0.08 & 0.05 & 0.01 & 0.02 & 0.03 & 0.02 & 0.01 & 0.02 & 0.03\\
-\addlinespace
-tajikistan & 0.07 & 0.02 & <0.01 & 0.05 & 0.02 & <0.01 & 0.02 & 0.03 & 0.01\\
-turkmenistan & 0.04 & 0.02 & <0.01 & 0.03 & 0.02 & <0.01 & 0.02 & 0.02 & <0.01\\
-uzbekistan & 0.19 & 0.06 & <0.01 & 0.12 & 0.09 & 0.02 & 0.04 & 0.07 & 0.02\\
-eastern and south-eastern asia & 12.79 (0.47) & 4.34 (0.16) & 1.93 (0.07) & 3.89 (0.11) & 2.92 (0.13) & 2.22 (0.1) & 1.18 (0.05) & 1.85 (0.08) & 2.31 (0.07)\\
-brunei darussalam & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
-\addlinespace
-cambodia & 0.6 & 0.03 & <0.01 & 0.07 & 0.03 & 0.01 & 0.03 & 0.04 & 0.02\\
-china & 7.83 & 2.41 & 1.28 & 2.04 & 1.22 & 1.41 & 0.44 & 0.65 & 1.43\\
-china, hong kong sar & 0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
-china, macao sar & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
-china, taiwan province of china & 0.03 & 0.06 & 0.04 & 0.01 & 0.02 & 0.03 & <0.01 & 0.01 & 0.01\\
-\addlinespace
-dem people's republic of korea & 0.07 & 0.03 & 0.01 & 0.07 & 0.03 & 0.01 & 0.02 & 0.02 & 0.02\\
-indonesia & 1.87 & 0.61 & 0.06 & 0.74 & 0.58 & 0.16 & 0.27 & 0.43 & 0.27\\
-japan & 0.1 & 0.13 & 0.18 & 0.02 & 0.05 & 0.11 & <0.01 & 0.02 & 0.06\\
-lao people's democratic republic & 0.09 & 0.02 & <0.01 & 0.06 & 0.02 & <0.01 & 0.02 & 0.02 & 0.01\\
-... & ... & ... & ... & ... & ... & ... & ... & ... & ...\\
+\endfirsthead
+\caption[]{Child deaths experienced by women in birth cohort c at exact age a. Obtained by weighting the first difference of child death by the life table distribution of women. Regional values include point estimate and standard deviation, in hundreds of thousands. \textit{(continued)}}\\
+\toprule
+\multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
+\cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
+Age & 25 & 70 & 99 & 25 & 70 & 99 & 25 & 70 & 99\\
+\midrule
+\endhead
+\
+\endfoot
 \bottomrule
-\end{tabular}
-\end{table}
+\endlastfoot
+Australia/New Zealand & 0.01 (0) & 0.02 (0.01) & 0.02 (0.01) & 0 (0) & 0.01 (0) & 0.01 (0) & 0 (0) & 0.01 (0) & 0.01 (0)\\
+Australia & 0.01 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01\\
+New Zealand & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Central and Southern Asia & 19.02 (0.51) & 3.98 (0.06) & 0.52 (0.01) & 11.17 (0.39) & 5.48 (0.12) & 1.35 (0.02) & 4.86 (0.15) & 4.37 (0.12) & 2.03 (0.06)\\
+Afghanistan & 0.47 & 0.07 & <0.01 & 0.5 & 0.16 & 0.01 & 0.23 & 0.17 & 0.03\\
+\addlinespace
+Bangladesh & 1.99 & 0.31 & 0.11 & 0.79 & 0.37 & 0.26 & 0.2 & 0.24 & 0.32\\
+Bhutan & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+India & 13.65 & 2.95 & 0.34 & 7.52 & 3.93 & 0.9 & 2.87 & 2.95 & 1.38\\
+Iran (Islamic Republic of) & 0.58 & 0.08 & 0.02 & 0.12 & 0.08 & 0.07 & 0.03 & 0.04 & 0.08\\
+Kazakhstan & 0.08 & 0.05 & 0.01 & 0.04 & 0.06 & 0.02 & 0.01 & 0.03 & 0.02\\
+\addlinespace
+Kyrgyzstan & 0.03 & 0.01 & <0.01 & 0.02 & 0.02 & 0.01 & 0.01 & 0.02 & 0.01\\
+Maldives & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Nepal & 0.4 & 0.05 & <0.01 & 0.16 & 0.07 & 0.02 & 0.04 & 0.05 & 0.04\\
+Pakistan & 1.4 & 0.31 & 0.01 & 1.78 & 0.63 & 0.03 & 1.39 & 0.74 & 0.08\\
+Sri Lanka & 0.08 & 0.05 & 0.01 & 0.02 & 0.03 & 0.02 & 0.01 & 0.02 & 0.03\\
+\addlinespace
+Tajikistan & 0.07 & 0.02 & <0.01 & 0.05 & 0.02 & <0.01 & 0.02 & 0.03 & 0.01\\
+Turkmenistan & 0.04 & 0.02 & <0.01 & 0.03 & 0.02 & <0.01 & 0.02 & 0.02 & <0.01\\
+Uzbekistan & 0.19 & 0.06 & <0.01 & 0.12 & 0.09 & 0.02 & 0.04 & 0.07 & 0.02\\
+Eastern and South-Eastern Asia & 12.79 (0.47) & 4.34 (0.16) & 1.93 (0.07) & 3.89 (0.11) & 2.92 (0.13) & 2.22 (0.1) & 1.18 (0.05) & 1.85 (0.08) & 2.31 (0.07)\\
+Brunei Darussalam & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Cambodia & 0.6 & 0.03 & <0.01 & 0.07 & 0.03 & 0.01 & 0.03 & 0.04 & 0.02\\
+China & 7.83 & 2.41 & 1.28 & 2.04 & 1.22 & 1.41 & 0.44 & 0.65 & 1.43\\
+China, Hong Kong SAR & 0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+China, Macao SAR & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+China, Taiwan Province of China & 0.03 & 0.06 & 0.04 & 0.01 & 0.02 & 0.03 & <0.01 & 0.01 & 0.01\\
+\addlinespace
+Dem. People's Republic of Korea & 0.07 & 0.03 & 0.01 & 0.07 & 0.03 & 0.01 & 0.02 & 0.02 & 0.02\\
+Indonesia & 1.87 & 0.61 & 0.06 & 0.74 & 0.58 & 0.16 & 0.27 & 0.43 & 0.27\\
+Japan & 0.1 & 0.13 & 0.18 & 0.02 & 0.05 & 0.11 & <0.01 & 0.02 & 0.06\\
+Lao People's Democratic Republic & 0.09 & 0.02 & <0.01 & 0.06 & 0.02 & <0.01 & 0.02 & 0.02 & 0.01\\
+Malaysia & 0.06 & 0.07 & 0.01 & 0.02 & 0.05 & 0.02 & 0.01 & 0.03 & 0.03\\
+\addlinespace
+Mongolia & 0.03 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01\\
+Myanmar & 0.6 & 0.17 & 0.01 & 0.31 & 0.16 & 0.01 & 0.12 & 0.12 & 0.02\\
+Philippines & 0.52 & 0.35 & 0.06 & 0.3 & 0.39 & 0.12 & 0.15 & 0.3 & 0.16\\
+Republic of Korea & 0.17 & 0.06 & 0.07 & 0.02 & 0.03 & 0.07 & <0.01 & 0.01 & 0.02\\
+Singapore & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Thailand & 0.3 & 0.16 & 0.07 & 0.07 & 0.11 & 0.1 & 0.01 & 0.05 & 0.08\\
+Timor-Leste & 0.03 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01\\
+Viet Nam & 0.48 & 0.24 & 0.11 & 0.16 & 0.2 & 0.15 & 0.09 & 0.13 & 0.16\\
+Europe and Northern America & 1.11 (0.02) & 2.05 (0.02) & 0.77 (0.01) & 0.34 (0) & 1.14 (0.01) & 0.74 (0.01) & 0.15 (0) & 0.66 (0.01) & 0.68 (0.01)\\
+Albania & 0.01 & 0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Austria & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Belarus & 0.01 & 0.03 & <0.01 & <0.01 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01\\
+Belgium & 0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01\\
+Bosnia and Herzegovina & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Bulgaria & 0.01 & 0.03 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Canada & 0.02 & 0.03 & 0.02 & 0.01 & 0.01 & 0.02 & <0.01 & 0.01 & 0.01\\
+Channel Islands & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Croatia & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Czechia & 0.01 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01\\
+Denmark & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Estonia & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Finland & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+France & 0.04 & 0.08 & 0.06 & 0.01 & 0.04 & 0.05 & 0.01 & 0.03 & 0.04\\
+Germany & 0.05 & 0.09 & 0.05 & 0.01 & 0.03 & 0.04 & <0.01 & 0.02 & 0.04\\
+Greece & 0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Hungary & 0.02 & 0.03 & 0.01 & <0.01 & 0.02 & 0.01 & <0.01 & <0.01 & <0.01\\
+Iceland & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Ireland & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Italy & 0.05 & 0.05 & 0.05 & 0.01 & 0.02 & 0.03 & <0.01 & 0.01 & 0.02\\
+Latvia & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Lithuania & <0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Luxembourg & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Malta & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Montenegro & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Netherlands & 0.01 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01\\
+\addlinespace
+North Macedonia & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Norway & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Poland & 0.07 & 0.1 & 0.05 & 0.01 & 0.05 & 0.05 & <0.01 & 0.02 & 0.03\\
+Portugal & 0.03 & 0.02 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01\\
+Republic of Moldova & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Romania & 0.05 & 0.07 & 0.01 & 0.02 & 0.04 & 0.02 & <0.01 & 0.01 & 0.01\\
+Russian Federation & 0.24 & 0.5 & 0.08 & 0.09 & 0.29 & 0.09 & 0.02 & 0.17 & 0.09\\
+Serbia & 0.02 & 0.03 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01\\
+Slovakia & 0.01 & 0.02 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Slovenia & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Spain & 0.04 & 0.04 & 0.04 & 0.01 & 0.02 & 0.02 & <0.01 & 0.01 & 0.01\\
+Sweden & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Switzerland & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Ukraine & 0.07 & 0.18 & 0.01 & 0.02 & 0.1 & 0.02 & 0.01 & 0.04 & 0.02\\
+United Kingdom & 0.04 & 0.07 & 0.04 & 0.01 & 0.03 & 0.03 & 0.01 & 0.02 & 0.03\\
+\addlinespace
+United States of America & 0.19 & 0.53 & 0.26 & 0.08 & 0.33 & 0.27 & 0.07 & 0.26 & 0.3\\
+Latin America and the Caribbean & 3.38 (0.08) & 1.52 (0.03) & 0.63 (0.01) & 1.13 (0.03) & 1.34 (0.03) & 1.02 (0.02) & 0.47 (0.01) & 0.82 (0.02) & 1.09 (0.02)\\
+Antigua and Barbuda & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Argentina & 0.09 & 0.07 & 0.03 & 0.04 & 0.07 & 0.05 & 0.02 & 0.05 & 0.07\\
+Aruba & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Bahamas & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Barbados & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Belize & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Bolivia (Plurinational State of) & 0.15 & 0.02 & 0.01 & 0.07 & 0.03 & 0.02 & 0.03 & 0.03 & 0.02\\
+Brazil & 1.2 & 0.48 & 0.23 & 0.33 & 0.38 & 0.35 & 0.09 & 0.21 & 0.34\\
+\addlinespace
+Chile & 0.05 & 0.03 & 0.02 & 0.01 & 0.02 & 0.03 & <0.01 & 0.01 & 0.02\\
+Colombia & 0.18 & 0.1 & 0.05 & 0.06 & 0.08 & 0.08 & 0.02 & 0.04 & 0.08\\
+Costa Rica & 0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01\\
+Cuba & 0.01 & 0.03 & 0.02 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01\\
+curaçao & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Dominican Republic & 0.07 & 0.03 & 0.01 & 0.02 & 0.03 & 0.02 & 0.01 & 0.02 & 0.02\\
+Ecuador & 0.1 & 0.03 & 0.02 & 0.03 & 0.03 & 0.03 & 0.01 & 0.02 & 0.04\\
+El Salvador & 0.09 & 0.03 & 0.01 & 0.02 & 0.03 & 0.01 & <0.01 & 0.01 & 0.01\\
+French Guiana & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Grenada & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Guadeloupe & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Guatemala & 0.15 & 0.04 & 0.01 & 0.07 & 0.05 & 0.03 & 0.03 & 0.04 & 0.04\\
+Guyana & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Haiti & 0.13 & 0.03 & <0.01 & 0.1 & 0.04 & 0.01 & 0.06 & 0.04 & 0.01\\
+Honduras & 0.07 & 0.02 & 0.01 & 0.03 & 0.03 & 0.02 & 0.01 & 0.02 & 0.02\\
+\addlinespace
+Jamaica & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Martinique & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Mexico & 0.61 & 0.37 & 0.12 & 0.19 & 0.32 & 0.19 & 0.09 & 0.19 & 0.22\\
+Nicaragua & 0.06 & 0.02 & 0.01 & 0.01 & 0.02 & 0.01 & 0.01 & 0.01 & 0.02\\
+Panama & 0.01 & 0.01 & 0.01 & 0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01\\
+\addlinespace
+Paraguay & 0.03 & 0.02 & <0.01 & 0.01 & 0.02 & 0.01 & 0.01 & 0.01 & 0.01\\
+Peru & 0.26 & 0.06 & 0.03 & 0.06 & 0.06 & 0.06 & 0.02 & 0.03 & 0.06\\
+Puerto Rico & 0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & <0.01\\
+Saint Lucia & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Saint Vincent and the Grenadines & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Suriname & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Trinidad and Tobago & 0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+United States Virgin Islands & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Uruguay & 0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01\\
+Venezuela (Bolivarian Republic of) & 0.07 & 0.07 & 0.02 & 0.03 & 0.07 & 0.04 & 0.04 & 0.06 & 0.05\\
+\addlinespace
+Northern Africa and Western Asia & 3.88 (0.15) & 0.85 (0.04) & 0.17 (0.01) & 1.5 (0.09) & 1.01 (0.03) & 0.4 (0.01) & 0.83 (0.03) & 0.96 (0.02) & 0.59 (0.03)\\
+Algeria & 0.45 & 0.07 & 0.02 & 0.09 & 0.06 & 0.04 & 0.04 & 0.03 & 0.05\\
+Armenia & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Azerbaijan & 0.07 & 0.02 & <0.01 & 0.03 & 0.02 & <0.01 & 0.01 & 0.01 & 0.01\\
+Bahrain & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Cyprus & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Egypt & 0.93 & 0.19 & 0.02 & 0.25 & 0.26 & 0.06 & 0.12 & 0.25 & 0.14\\
+Georgia & 0.01 & 0.02 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01\\
+Iraq & 0.16 & 0.08 & <0.01 & 0.13 & 0.11 & 0.02 & 0.09 & 0.13 & 0.04\\
+Israel & 0.01 & <0.01 & <0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01\\
+\addlinespace
+Jordan & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & 0.01 & 0.01 & 0.01 & 0.01\\
+Kuwait & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Lebanon & 0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & 0.01\\
+Libya & 0.03 & 0.02 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01\\
+Morocco & 0.41 & 0.05 & 0.01 & 0.1 & 0.04 & 0.03 & 0.03 & 0.02 & 0.04\\
+\addlinespace
+Oman & 0.02 & <0.01 & <0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & 0.01\\
+Qatar & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Saudi Arabia & 0.1 & 0.02 & 0.01 & 0.04 & 0.04 & 0.03 & 0.01 & 0.02 & 0.03\\
+State of Palestine & 0.03 & 0.01 & <0.01 & 0.01 & 0.01 & 0.01 & 0.01 & 0.01 & 0.01\\
+Sudan & 0.29 & 0.09 & <0.01 & 0.35 & 0.15 & 0.01 & 0.3 & 0.22 & 0.04\\
+\addlinespace
+Syrian Arab Republic & 0.1 & 0.04 & 0.01 & 0.04 & 0.04 & 0.02 & 0.02 & 0.03 & 0.03\\
+Tunisia & 0.1 & 0.02 & 0.01 & 0.02 & 0.01 & 0.01 & 0.01 & 0.01 & 0.01\\
+Turkey & 0.85 & 0.13 & 0.06 & 0.19 & 0.1 & 0.12 & 0.05 & 0.06 & 0.13\\
+United Arab Emirates & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Western Sahara & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Yemen & 0.27 & 0.05 & <0.01 & 0.2 & 0.11 & 0.01 & 0.13 & 0.12 & 0.01\\
+Oceania (exc. AUS and NZ) & 0.06 (0) & 0.03 (0) & 0 (0) & 0.06 (0) & 0.04 (0) & 0 (0) & 0.04 (0) & 0.04 (0) & 0.01 (0)\\
+Fiji & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+French Polynesia & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Guam & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Kiribati & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Micronesia (Fed. States of) & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+New Caledonia & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Papua New Guinea & 0.05 & 0.02 & <0.01 & 0.05 & 0.03 & <0.01 & 0.03 & 0.04 & <0.01\\
+Samoa & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Solomon Islands & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Tonga & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Vanuatu & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Sub-Saharan Africa & 9.56 (0.22) & 2 (0.04) & 0.03 (0) & 12.55 (0.27) & 3.73 (0.07) & 0.18 (0) & 8.45 (0.18) & 5.78 (0.11) & 0.66 (0.01)\\
+Angola & 0.31 & 0.05 & <0.01 & 0.43 & 0.1 & <0.01 & 0.27 & 0.21 & 0.02\\
+\addlinespace
+Benin & 0.11 & 0.02 & <0.01 & 0.13 & 0.04 & <0.01 & 0.14 & 0.07 & 0.01\\
+Botswana & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01\\
+Burkina Faso & 0.24 & 0.04 & <0.01 & 0.3 & 0.06 & <0.01 & 0.18 & 0.11 & 0.01\\
+Burundi & 0.16 & 0.03 & <0.01 & 0.18 & 0.05 & <0.01 & 0.08 & 0.06 & 0.01\\
+Cabo Verde & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Cameroon & 0.18 & 0.05 & <0.01 & 0.3 & 0.1 & <0.01 & 0.21 & 0.15 & <0.01\\
+Central African Republic & 0.05 & 0.01 & <0.01 & 0.08 & 0.02 & <0.01 & 0.06 & 0.04 & <0.01\\
+Chad & 0.15 & 0.03 & <0.01 & 0.26 & 0.07 & <0.01 & 0.24 & 0.12 & <0.01\\
+Comoros & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01\\
+Congo & 0.03 & 0.01 & <0.01 & 0.04 & 0.02 & <0.01 & 0.02 & 0.03 & <0.01\\
+\addlinespace
+côte d'ivoire & 0.14 & 0.04 & <0.01 & 0.29 & 0.1 & <0.01 & 0.23 & 0.18 & <0.01\\
+Democratic Republic of the Congo & 0.69 & 0.14 & <0.01 & 1.15 & 0.29 & 0.01 & 1.14 & 0.55 & 0.05\\
+Djibouti & <0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Equatorial Guinea & 0.01 & <0.01 & <0.01 & 0.01 & <0.01 & <0.01 & 0.01 & 0.01 & <0.01\\
+Eritrea & 0.04 & 0.01 & <0.01 & 0.03 & 0.02 & <0.01 & 0.01 & 0.02 & 0.01\\
+\addlinespace
+Eswatini & 0.01 & <0.01 & <0.01 & 0.01 & 0.01 & <0.01 & <0.01 & 0.01 & <0.01\\
+Ethiopia & 1.09 & 0.17 & 0.01 & 1.18 & 0.35 & 0.06 & 0.51 & 0.47 & 0.18\\
+Gabon & 0.01 & <0.01 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01\\
+Gambia & 0.02 & <0.01 & <0.01 & 0.02 & 0.01 & <0.01 & 0.02 & 0.01 & <0.01\\
+Ghana & 0.22 & 0.06 & <0.01 & 0.22 & 0.1 & <0.01 & 0.13 & 0.12 & 0.01\\
+\addlinespace
+Guinea & 0.18 & 0.02 & <0.01 & 0.18 & 0.04 & <0.01 & 0.11 & 0.07 & <0.01\\
+Guinea-Bissau & 0.03 & 0.01 & <0.01 & 0.03 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01\\
+Kenya & 0.3 & 0.11 & <0.01 & 0.43 & 0.2 & 0.01 & 0.19 & 0.23 & 0.05\\
+Lesotho & 0.02 & 0.01 & <0.01 & 0.03 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01\\
+Liberia & 0.05 & 0.01 & <0.01 & 0.06 & 0.02 & <0.01 & 0.03 & 0.02 & <0.01\\
+\addlinespace
+Madagascar & 0.24 & 0.05 & <0.01 & 0.19 & 0.08 & 0.01 & 0.1 & 0.11 & 0.04\\
+Malawi & 0.2 & 0.03 & <0.01 & 0.21 & 0.06 & <0.01 & 0.08 & 0.09 & 0.02\\
+Mali & 0.31 & 0.03 & <0.01 & 0.34 & 0.07 & <0.01 & 0.25 & 0.13 & <0.01\\
+Mauritania & 0.03 & 0.01 & <0.01 & 0.04 & 0.02 & <0.01 & 0.03 & 0.02 & <0.01\\
+Mauritius & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Mayotte & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Mozambique & 0.36 & 0.06 & <0.01 & 0.36 & 0.11 & <0.01 & 0.2 & 0.2 & 0.02\\
+Namibia & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01 & 0.01 & 0.01 & <0.01\\
+Niger & 0.26 & 0.03 & <0.01 & 0.34 & 0.07 & <0.01 & 0.25 & 0.17 & 0.02\\
+Nigeria & 1.98 & 0.38 & <0.01 & 3.15 & 0.73 & <0.01 & 2.38 & 1.19 & 0.02\\
+\addlinespace
+réunion & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Rwanda & 0.19 & 0.02 & <0.01 & 0.19 & 0.04 & 0.01 & 0.03 & 0.04 & 0.02\\
+Sao Tome and Principe & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+Senegal & 0.16 & 0.02 & <0.01 & 0.15 & 0.05 & <0.01 & 0.06 & 0.07 & 0.02\\
+Seychelles & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01 & <0.01\\
+\addlinespace
+Sierra Leone & 0.11 & 0.01 & <0.01 & 0.14 & 0.03 & <0.01 & 0.07 & 0.04 & <0.01\\
+Somalia & 0.14 & 0.03 & <0.01 & 0.22 & 0.06 & <0.01 & 0.31 & 0.12 & <0.01\\
+South Africa & 0.32 & 0.19 & <0.01 & 0.26 & 0.2 & <0.01 & 0.09 & 0.18 & 0.01\\
+South Sudan & 0.16 & 0.02 & <0.01 & 0.17 & 0.05 & <0.01 & 0.14 & 0.07 & <0.01\\
+Togo & 0.07 & 0.02 & <0.01 & 0.09 & 0.03 & <0.01 & 0.06 & 0.04 & <0.01\\
+\addlinespace
+Uganda & 0.31 & 0.07 & <0.01 & 0.48 & 0.17 & 0.01 & 0.27 & 0.27 & 0.03\\
+United Republic of Tanzania & 0.41 & 0.08 & <0.01 & 0.47 & 0.18 & 0.01 & 0.32 & 0.31 & 0.05\\
+Zambia & 0.11 & 0.03 & <0.01 & 0.22 & 0.07 & <0.01 & 0.1 & 0.12 & 0.01\\
+Zimbabwe & 0.11 & 0.05 & <0.01 & 0.14 & 0.07 & <0.01 & 0.06 & 0.09 & 0.01\\*
+\end{longtable}
+\endgroup{}
