--- a/Output/tabS9.tex
+++ b/Output/tabS9.tex
@@ -1,46 +1,269 @@
-\begin{table}
+\begingroup\fontsize{7}{9}\selectfont
 
-\caption{\label{tab:S9}Number of children expected to live longer than their mothers, asuming that the mothers survive to mean age at death (life expectancy) in their cohort and country of birth. Regional estimates show the median value and IQR in parenthesis.}
-\centering
-\begin{tabular}[t]{lllllll}
+\begin{longtable}[t]{lllllll}
+\caption{\label{tab:S9}Number of children expected to live longer than their mothers, asuming that the mothers survive to mean age at death (life expectancy) in their cohort and country of birth. Regional estimates show the median value and IQR in parenthesis.}\\
 \toprule
 Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
 \midrule
-australia\_new zealand & 2.19 (0.1) & 2.03 (0.1) & 1.95 (0.1) & 1.92 (0) & 1.85 (0) & 1.77 (0)\\
-australia & 2.07 & 1.95 & 1.89 & 1.89 & 1.83 & 1.77\\
-new zealand & 2.3 & 2.1 & 2.01 & 1.94 & 1.87 & 1.78\\
-central and southern asia & 4.02 (1.1) & 3.54 (1.1) & 2.82 (0.6) & 2.42 (0.4) & 2.17 (0.7) & 2.01 (0.7)\\
-afghanistan & 4.07 & 5.14 & 5.38 & 4.92 & 3.93 & 3.09\\
-\addlinespace
-bangladesh & 4.12 & 3.43 & 2.75 & 2.16 & 1.78 & 1.6\\
-bhutan & 4.18 & 3.95 & 3.15 & 2.39 & 1.9 & 1.68\\
-india & 3.33 & 3.07 & 2.79 & 2.46 & 2.24 & 2.01\\
-iran (islamic republic of) & 4.74 & 3.93 & 2.5 & 1.92 & 1.96 & 1.98\\
-kazakhstan & 2.44 & 2.23 & 2.13 & 2.25 & 2.41 & 2.35\\
-\addlinespace
-kyrgyzstan & 3.37 & 3.1 & 2.81 & 2.63 & 2.67 & 2.51\\
-maldives & 5.1 & 4.84 & 3.4 & 2.19 & 1.86 & 1.69\\
-nepal & 3.63 & 3.64 & 3.2 & 2.48 & 1.81 & 1.51\\
-pakistan & 4.89 & 4.65 & 4.1 & 3.39 & 2.92 & 2.63\\
-sri lanka & 2.95 & 2.47 & 2.08 & 2.04 & 1.97 & 1.9\\
-\addlinespace
-tajikistan & 4.64 & 4.4 & 3.58 & 2.96 & 2.85 & 2.82\\
-turkmenistan & 3.97 & 3.36 & 2.7 & 2.45 & 2.47 & 2.29\\
-uzbekistan & 3.9 & 3.29 & 2.83 & 2.33 & 2.11 & 2\\
-eastern and south-eastern asia & 3.03 (1.5) & 2.74 (1.4) & 2.03 (1) & 1.81 (0.9) & 1.83 (0.7) & 1.75 (0.5)\\
-brunei darussalam & 4.08 & 3.21 & 2.33 & 1.91 & 1.78 & 1.64\\
-\addlinespace
-cambodia & 3.73 & 3.88 & 3.28 & 2.41 & 2.08 & 1.93\\
-china & 2.68 & 2.03 & 1.75 & 1.62 & 1.67 & 1.73\\
-china, hong kong sar & 2.19 & 1.45 & 1.1 & 1.22 & 1.45 & 1.56\\
-china, macao sar & 1.43 & 1.79 & 1.11 & 1.01 & 1.18 & 1.31\\
-china, taiwan province of china & 2.47 & 1.99 & 1.61 & 1.34 & 1.34 & 1.42\\
-\addlinespace
-dem people's republic of korea & 2.38 & 2.28 & 1.92 & 1.81 & 1.83 & 1.77\\
-indonesia & 3.55 & 2.91 & 2.33 & 2.13 & 2.05 & 1.92\\
-japan & 1.86 & 1.7 & 1.41 & 1.39 & 1.45 & 1.47\\
-lao people's democratic republic & 4.39 & 4.31 & 3.54 & 2.72 & 2.27 & 2.03\\
-... & ... & ... & ... & ... & ... & ...\\
+\endfirsthead
+\caption[]{Number of children expected to live longer than their mothers, asuming that the mothers survive to mean age at death (life expectancy) in their cohort and country of birth. Regional estimates show the median value and IQR in parenthesis. \textit{(continued)}}\\
+\toprule
+Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
+\midrule
+\endhead
+\
+\endfoot
 \bottomrule
-\end{tabular}
-\end{table}
+\endlastfoot
+Australia & 2.07 & 1.95 & 1.89 & 1.89 & 1.83 & 1.77\\
+New Zealand & 2.3 & 2.1 & 2.01 & 1.94 & 1.87 & 1.78\\
+australia\_new zealand & 2.19 (0.1) & 2.03 (0.1) & 1.95 (0.1) & 1.92 (0) & 1.85 (0) & 1.77 (0)\\
+central and southern asia & 4.02 (1.1) & 3.54 (1.1) & 2.82 (0.6) & 2.42 (0.4) & 2.17 (0.7) & 2.01 (0.7)\\
+Afghanistan & 4.07 & 5.14 & 5.38 & 4.92 & 3.93 & 3.09\\
+\addlinespace
+Bangladesh & 4.12 & 3.43 & 2.75 & 2.16 & 1.78 & 1.6\\
+Bhutan & 4.18 & 3.95 & 3.15 & 2.39 & 1.9 & 1.68\\
+India & 3.33 & 3.07 & 2.79 & 2.46 & 2.24 & 2.01\\
+Iran (Islamic Republic of) & 4.74 & 3.93 & 2.5 & 1.92 & 1.96 & 1.98\\
+Kazakhstan & 2.44 & 2.23 & 2.13 & 2.25 & 2.41 & 2.35\\
+\addlinespace
+Kyrgyzstan & 3.37 & 3.1 & 2.81 & 2.63 & 2.67 & 2.51\\
+Maldives & 5.1 & 4.84 & 3.4 & 2.19 & 1.86 & 1.69\\
+Nepal & 3.63 & 3.64 & 3.2 & 2.48 & 1.81 & 1.51\\
+Pakistan & 4.89 & 4.65 & 4.1 & 3.39 & 2.92 & 2.63\\
+Sri Lanka & 2.95 & 2.47 & 2.08 & 2.04 & 1.97 & 1.9\\
+\addlinespace
+Tajikistan & 4.64 & 4.4 & 3.58 & 2.96 & 2.85 & 2.82\\
+Turkmenistan & 3.97 & 3.36 & 2.7 & 2.45 & 2.47 & 2.29\\
+Uzbekistan & 3.9 & 3.29 & 2.83 & 2.33 & 2.11 & 2\\
+eastern and south-eastern asia & 3.03 (1.5) & 2.74 (1.4) & 2.03 (1) & 1.81 (0.9) & 1.83 (0.7) & 1.75 (0.5)\\
+Brunei Darussalam & 4.08 & 3.21 & 2.33 & 1.91 & 1.78 & 1.64\\
+\addlinespace
+Cambodia & 3.73 & 3.88 & 3.28 & 2.41 & 2.08 & 1.93\\
+China & 2.68 & 2.03 & 1.75 & 1.62 & 1.67 & 1.73\\
+China, Hong Kong SAR & 2.19 & 1.45 & 1.1 & 1.22 & 1.45 & 1.56\\
+China, Macao SAR & 1.43 & 1.79 & 1.11 & 1.01 & 1.18 & 1.31\\
+China, Taiwan Province of China & 2.47 & 1.99 & 1.61 & 1.34 & 1.34 & 1.42\\
+\addlinespace
+Dem. People's Republic of Korea & 2.38 & 2.28 & 1.92 & 1.81 & 1.83 & 1.77\\
+Indonesia & 3.55 & 2.91 & 2.33 & 2.13 & 2.05 & 1.92\\
+Japan & 1.86 & 1.7 & 1.41 & 1.39 & 1.45 & 1.47\\
+Lao People's Democratic Republic & 4.39 & 4.31 & 3.54 & 2.72 & 2.27 & 2.03\\
+Malaysia & 3.91 & 3.38 & 2.75 & 2.15 & 1.89 & 1.75\\
+\addlinespace
+Mongolia & 4.08 & 3.24 & 2.39 & 2.38 & 2.55 & 2.43\\
+Myanmar & 3.83 & 3.01 & 2.39 & 2.08 & 1.86 & 1.75\\
+Philippines & 4.17 & 3.57 & 3.19 & 2.82 & 2.33 & 2.02\\
+Republic of Korea & 2.44 & 1.84 & 1.65 & 1.41 & 1.25 & 1.23\\
+Singapore & 2.07 & 1.74 & 1.52 & 1.29 & 1.22 & 1.23\\
+\addlinespace
+Thailand & 2.72 & 1.95 & 1.58 & 1.41 & 1.31 & 1.31\\
+Timor-Leste & 3.03 & 4.11 & 4.71 & 4.27 & 3.51 & 2.94\\
+Viet Nam & 3.88 & 2.74 & 2.03 & 1.73 & 2.02 & 2.17\\
+europe and northern america & 1.75 (0.3) & 1.7 (0.3) & 1.61 (0.3) & 1.53 (0.3) & 1.59 (0.2) & 1.63 (0.2)\\
+Albania & 3.32 & 2.66 & 2.17 & 1.7 & 1.53 & 1.43\\
+\addlinespace
+Austria & 1.61 & 1.5 & 1.48 & 1.51 & 1.59 & 1.65\\
+Belarus & 1.69 & 1.57 & 1.38 & 1.44 & 1.73 & 1.8\\
+Belgium & 1.64 & 1.65 & 1.7 & 1.84 & 1.77 & 1.67\\
+Bosnia and Herzegovina & 2 & 1.76 & 1.54 & 1.41 & 1.33 & 1.28\\
+Bulgaria & 1.73 & 1.58 & 1.39 & 1.39 & 1.52 & 1.63\\
+\addlinespace
+Canada & 1.73 & 1.64 & 1.63 & 1.63 & 1.57 & 1.53\\
+Channel Islands & 1.51 & 1.51 & 1.49 & 1.52 & 1.52 & 1.54\\
+Croatia & 1.63 & 1.69 & 1.59 & 1.58 & 1.55 & 1.5\\
+Czechia & 1.82 & 1.72 & 1.61 & 1.53 & 1.64 & 1.72\\
+Denmark & 1.71 & 1.71 & 1.82 & 1.8 & 1.74 & 1.7\\
+\addlinespace
+Estonia & 1.71 & 1.69 & 1.57 & 1.64 & 1.73 & 1.72\\
+Finland & 1.63 & 1.74 & 1.76 & 1.71 & 1.53 & 1.42\\
+France & 1.88 & 1.88 & 1.84 & 1.91 & 1.84 & 1.75\\
+Germany & 1.49 & 1.46 & 1.4 & 1.51 & 1.64 & 1.69\\
+Greece & 1.88 & 1.71 & 1.5 & 1.4 & 1.36 & 1.33\\
+\addlinespace
+Hungary & 1.67 & 1.69 & 1.6 & 1.41 & 1.42 & 1.52\\
+Iceland & 2.36 & 2.22 & 2.11 & 2.06 & 1.88 & 1.74\\
+Ireland & 2.8 & 2.26 & 2.01 & 1.94 & 1.86 & 1.75\\
+Italy & 1.72 & 1.53 & 1.41 & 1.4 & 1.38 & 1.38\\
+Latvia & 1.57 & 1.56 & 1.44 & 1.45 & 1.61 & 1.7\\
+\addlinespace
+Lithuania & 1.74 & 1.57 & 1.45 & 1.51 & 1.68 & 1.71\\
+Luxembourg & 1.54 & 1.58 & 1.72 & 1.69 & 1.48 & 1.42\\
+Malta & 1.9 & 1.88 & 1.66 & 1.52 & 1.55 & 1.61\\
+Montenegro & 2.17 & 1.95 & 1.87 & 1.83 & 1.82 & 1.78\\
+Netherlands & 1.75 & 1.72 & 1.68 & 1.69 & 1.66 & 1.67\\
+\addlinespace
+North Macedonia & 2.13 & 2 & 1.86 & 1.67 & 1.59 & 1.56\\
+Norway & 1.87 & 1.82 & 1.91 & 1.86 & 1.74 & 1.66\\
+Poland & 1.91 & 1.85 & 1.65 & 1.37 & 1.41 & 1.48\\
+Portugal & 1.92 & 1.67 & 1.54 & 1.41 & 1.41 & 1.46\\
+Republic of Moldova & 1.96 & 1.95 & 1.62 & 1.26 & 1.22 & 1.28\\
+\addlinespace
+Romania & 2.01 & 1.8 & 1.41 & 1.4 & 1.53 & 1.61\\
+Russian Federation & 1.57 & 1.46 & 1.29 & 1.42 & 1.71 & 1.79\\
+Serbia & 2 & 2 & 1.8 & 1.66 & 1.53 & 1.49\\
+Slovakia & 2.03 & 1.86 & 1.66 & 1.42 & 1.45 & 1.55\\
+Slovenia & 1.68 & 1.62 & 1.53 & 1.53 & 1.63 & 1.68\\
+\addlinespace
+Spain & 2.01 & 1.62 & 1.4 & 1.36 & 1.45 & 1.5\\
+Sweden & 1.79 & 1.87 & 1.86 & 1.83 & 1.82 & 1.78\\
+Switzerland & 1.63 & 1.62 & 1.56 & 1.57 & 1.62 & 1.63\\
+Ukraine & 1.55 & 1.43 & 1.27 & 1.26 & 1.37 & 1.43\\
+United Kingdom & 1.83 & 1.76 & 1.73 & 1.77 & 1.78 & 1.74\\
+\addlinespace
+United States of America & 1.7 & 1.69 & 1.82 & 1.87 & 1.83 & 1.8\\
+latin america and the caribbean & 3.34 (1.2) & 2.74 (0.9) & 2.32 (0.6) & 2.06 (0.5) & 1.88 (0.4) & 1.77 (0.4)\\
+Antigua and Barbuda & 2.2 & 1.92 & 1.9 & 1.85 & 1.79 & 1.78\\
+Argentina & 2.66 & 2.64 & 2.36 & 2.16 & 2.04 & 1.96\\
+Aruba & 2.25 & 2 & 1.73 & 1.7 & 1.95 & 2\\
+\addlinespace
+Bahamas & 2.51 & 2.39 & 2.04 & 1.76 & 1.63 & 1.58\\
+Barbados & 2.01 & 1.7 & 1.54 & 1.59 & 1.59 & 1.72\\
+Belize & 4.73 & 3.98 & 3.2 & 2.54 & 2.05 & 1.82\\
+Bolivia (Plurinational State of) & 3.71 & 3.55 & 3.19 & 2.78 & 2.4 & 2.15\\
+Brazil & 3.05 & 2.39 & 1.98 & 1.74 & 1.57 & 1.51\\
+\addlinespace
+Chile & 2.51 & 2.34 & 2.03 & 1.79 & 1.65 & 1.55\\
+Colombia & 3.16 & 2.57 & 2.19 & 1.87 & 1.63 & 1.52\\
+Costa Rica & 3.1 & 2.77 & 2.29 & 1.81 & 1.6 & 1.52\\
+Cuba & 2.06 & 1.61 & 1.5 & 1.42 & 1.43 & 1.4\\
+curaçao & 2.29 & 2.02 & 1.99 & 1.92 & 1.74 & 1.61\\
+\addlinespace
+Dominican Republic & 3.54 & 2.78 & 2.38 & 2.14 & 1.97 & 1.83\\
+Ecuador & 3.81 & 3.12 & 2.64 & 2.3 & 2.07 & 1.94\\
+El Salvador & 3.7 & 3.13 & 2.57 & 2.05 & 1.74 & 1.63\\
+French Guiana & 3.26 & 3.37 & 3.48 & 3.46 & 3.25 & 3.01\\
+Grenada & 3.73 & 3.27 & 2.6 & 2 & 1.83 & 1.72\\
+\addlinespace
+Guadeloupe & 2.91 & 2.22 & 2.09 & 2.06 & 2.01 & 1.93\\
+Guatemala & 4.74 & 4.39 & 3.83 & 3.17 & 2.55 & 2.24\\
+Guyana & 3.22 & 2.58 & 2.26 & 2.16 & 2.02 & 1.91\\
+Haiti & 4.14 & 3.85 & 3.32 & 2.82 & 2.41 & 2.16\\
+Honduras & 4.76 & 4.17 & 3.54 & 2.81 & 2.22 & 1.96\\
+\addlinespace
+Jamaica & 3.43 & 2.69 & 2.27 & 2.01 & 1.81 & 1.71\\
+Martinique & 2.5 & 1.96 & 1.88 & 1.9 & 1.84 & 1.76\\
+Mexico & 4.04 & 3.09 & 2.43 & 2.08 & 1.88 & 1.74\\
+Nicaragua & 4.5 & 3.75 & 2.91 & 2.34 & 2.08 & 1.93\\
+Panama & 3.32 & 2.75 & 2.38 & 2.22 & 2.12 & 2\\
+\addlinespace
+Paraguay & 4.11 & 3.66 & 3.07 & 2.45 & 2.08 & 1.92\\
+Peru & 3.91 & 3.2 & 2.64 & 2.29 & 2.05 & 1.89\\
+Puerto Rico & 2.25 & 1.98 & 1.7 & 1.52 & 1.24 & 1.1\\
+Saint Lucia & 3.98 & 3.28 & 2.36 & 1.5 & 1.25 & 1.2\\
+Saint Vincent and the Grenadines & 3.74 & 2.73 & 2.22 & 1.81 & 1.63 & 1.54\\
+\addlinespace
+Suriname & 3.53 & 2.77 & 2.54 & 2.41 & 2.16 & 2.01\\
+Trinidad and Tobago & 2.75 & 2.32 & 1.73 & 1.56 & 1.53 & 1.49\\
+United States Virgin Islands & 3.37 & 2.72 & 2.27 & 2.2 & 2.2 & 2.02\\
+Uruguay & 2.31 & 2.18 & 2 & 1.83 & 1.73 & 1.7\\
+Venezuela (Bolivarian Republic of) & 3.57 & 2.9 & 2.41 & 2.08 & 1.87 & 1.74\\
+\addlinespace
+northern africa and western asia & 4.6 (2.1) & 3.8 (1.7) & 2.91 (1.4) & 2.34 (1) & 2.18 (0.8) & 1.95 (0.6)\\
+Algeria & 5.36 & 4.29 & 2.91 & 2.6 & 2.63 & 2.41\\
+Armenia & 2.15 & 2.01 & 1.76 & 1.64 & 1.73 & 1.77\\
+Azerbaijan & 2.9 & 2.4 & 2.03 & 1.67 & 1.7 & 1.68\\
+Bahrain & 4.56 & 3.68 & 2.71 & 2.15 & 1.86 & 1.71\\
+\addlinespace
+Cyprus & 2.15 & 2.28 & 2.05 & 1.5 & 1.32 & 1.29\\
+Egypt & 4.12 & 3.8 & 3.23 & 2.91 & 2.89 & 2.71\\
+Georgia & 1.83 & 1.86 & 1.59 & 1.57 & 1.84 & 1.87\\
+Iraq & 5.88 & 5.03 & 4.1 & 3.51 & 3.21 & 2.82\\
+Israel & 3.13 & 3.06 & 2.97 & 2.97 & 2.97 & 2.82\\
+\addlinespace
+Jordan & 6.06 & 5.02 & 3.95 & 3.33 & 2.68 & 2.26\\
+Kuwait & 5.14 & 3.66 & 2.54 & 2.29 & 2.05 & 1.95\\
+Lebanon & 3.56 & 3.01 & 2.51 & 2.03 & 1.95 & 1.88\\
+Libya & 6.63 & 4.77 & 2.96 & 2.26 & 2 & 1.83\\
+Morocco & 4.6 & 3.62 & 2.68 & 2.34 & 2.2 & 2.04\\
+\addlinespace
+Oman & 6.01 & 5.74 & 4.11 & 3.08 & 2.64 & 2.3\\
+Qatar & 5.43 & 4.38 & 3.42 & 2.29 & 1.73 & 1.58\\
+Saudi Arabia & 5.62 & 5.18 & 4.01 & 2.96 & 2.24 & 1.93\\
+State of Palestine & 6.06 & 5.52 & 5.02 & 4.21 & 3.43 & 2.92\\
+Sudan & 5.15 & 4.61 & 4.07 & 4.1 & 3.96 & 3.6\\
+\addlinespace
+Syrian Arab Republic & 5.96 & 4.71 & 3.71 & 3.2 & 2.66 & 2.34\\
+Tunisia & 4.27 & 3.32 & 2.42 & 2.05 & 2.01 & 1.91\\
+Turkey & 3.4 & 2.81 & 2.35 & 2.2 & 2.07 & 1.95\\
+United Arab Emirates & 5.06 & 4.21 & 2.66 & 2 & 1.8 & 1.52\\
+Western Sahara & 4.21 & 3.63 & 2.89 & 2.41 & 2.18 & 1.99\\
+\addlinespace
+Yemen & 4.22 & 5.6 & 5.41 & 4.21 & 3.27 & 2.72\\
+Fiji & 3.25 & 3.01 & 2.87 & 2.59 & 2.48 & 2.36\\
+French Polynesia & 3.72 & 3.19 & 2.62 & 2.08 & 1.84 & 1.72\\
+Guam & 3.13 & 2.75 & 2.69 & 2.5 & 2.28 & 2.13\\
+Kiribati & 4.02 & 3.77 & 3.51 & 3.41 & 3.2 & 2.98\\
+\addlinespace
+Micronesia (Fed. States of) & 5.27 & 4.45 & 3.77 & 3.31 & 2.86 & 2.56\\
+New Caledonia & 3.41 & 2.97 & 2.57 & 2.23 & 1.99 & 1.84\\
+Papua New Guinea & 4.39 & 4.01 & 3.7 & 3.42 & 3.07 & 2.81\\
+Samoa & 5.52 & 4.58 & 4.09 & 4.06 & 3.63 & 3.29\\
+Solomon Islands & 5.21 & 5.08 & 4.44 & 3.94 & 3.66 & 3.41\\
+\addlinespace
+Tonga & 4.84 & 4.43 & 3.91 & 3.56 & 3.21 & 2.96\\
+Vanuatu & 4.73 & 4.39 & 4.06 & 3.74 & 3.39 & 3.15\\
+oceania (exc. Aus and NZ) & 4.39 (1.5) & 4.01 (1.3) & 3.7 (1.2) & 3.41 (1.1) & 3.07 (0.9) & 2.81 (0.8)\\
+sub-saharan africa & 4.45 (1) & 4.36 (0.6) & 4.26 (0.6) & 3.97 (0.7) & 3.6 (0.8) & 3.17 (0.8)\\
+Angola & 4.56 & 4.76 & 4.77 & 4.71 & 4.57 & 4.22\\
+\addlinespace
+Benin & 4.45 & 4.54 & 4.32 & 4.09 & 3.84 & 3.55\\
+Botswana & 4.45 & 3.6 & 2.9 & 2.6 & 2.44 & 2.27\\
+Burkina Faso & 3.93 & 4.57 & 4.56 & 4.45 & 4.24 & 3.87\\
+Burundi & 5.14 & 5.26 & 5.18 & 4.97 & 4.54 & 4.04\\
+Cabo Verde & 4.93 & 4.2 & 3.2 & 2.38 & 1.99 & 1.8\\
+\addlinespace
+Cameroon & 4.45 & 4.52 & 4.26 & 4.08 & 3.8 & 3.47\\
+Central African Republic & 3.72 & 3.96 & 3.91 & 3.73 & 3.52 & 3.18\\
+Chad & 4.32 & 4.75 & 5.04 & 4.91 & 4.44 & 3.91\\
+Comoros & 5.12 & 4.92 & 4.29 & 3.85 & 3.44 & 3.11\\
+Congo & 4.54 & 4.1 & 3.86 & 3.78 & 3.68 & 3.42\\
+\addlinespace
+côte d'ivoire & 4.34 & 4.9 & 4.35 & 3.98 & 3.7 & 3.42\\
+Democratic Republic of the Congo & 4.62 & 4.65 & 4.75 & 4.73 & 4.5 & 4.02\\
+Djibouti & 4.84 & 4.48 & 3.78 & 2.89 & 2.36 & 2.08\\
+Equatorial Guinea & 3.4 & 4.05 & 4.07 & 3.81 & 3.44 & 3.06\\
+Eritrea & 4.3 & 4.46 & 4.29 & 3.96 & 3.53 & 3.14\\
+\addlinespace
+Eswatini & 4.76 & 4.21 & 3.32 & 2.62 & 2.35 & 2.22\\
+Ethiopia & 4.47 & 4.8 & 4.76 & 4.32 & 3.61 & 3.04\\
+Gabon & 3.99 & 4.24 & 3.96 & 3.6 & 3.38 & 3.11\\
+Gambia & 3.59 & 4.38 & 4.8 & 4.72 & 4.46 & 4\\
+Ghana & 4.7 & 4.29 & 3.83 & 3.53 & 3.26 & 3\\
+\addlinespace
+Guinea & 3.58 & 4.06 & 4.3 & 4.18 & 3.83 & 3.42\\
+Guinea-Bissau & 4.16 & 4.45 & 4.27 & 3.98 & 3.66 & 3.27\\
+Kenya & 5.62 & 4.84 & 4.13 & 3.56 & 3.03 & 2.62\\
+Lesotho & 4.08 & 3.58 & 2.98 & 2.54 & 2.35 & 2.27\\
+Liberia & 4.09 & 4.21 & 3.96 & 3.85 & 3.55 & 3.13\\
+\addlinespace
+Madagascar & 4.67 & 4.45 & 4.09 & 3.84 & 3.48 & 3.17\\
+Malawi & 3.77 & 4.17 & 4.33 & 4.11 & 3.56 & 3.06\\
+Mali & 2.8 & 3.58 & 4.46 & 4.76 & 4.53 & 4.06\\
+Mauritania & 4.93 & 4.6 & 4.27 & 4.05 & 3.78 & 3.51\\
+Mauritius & 2.47 & 2.02 & 1.84 & 1.58 & 1.36 & 1.3\\
+\addlinespace
+Mayotte & 6.65 & 5.82 & 4.66 & 3.93 & 3.36 & 2.92\\
+Mozambique & 3.74 & 3.82 & 4.04 & 4.17 & 3.98 & 3.61\\
+Namibia & 4.76 & 4.05 & 3.3 & 2.95 & 2.84 & 2.66\\
+Niger & 3.96 & 4.34 & 4.85 & 5.51 & 5.55 & 5.1\\
+Nigeria & 3.97 & 4.29 & 4.31 & 4.27 & 4.15 & 3.82\\
+\addlinespace
+réunion & 2.8 & 2.41 & 2.27 & 2.13 & 2 & 1.88\\
+Rwanda & 4.87 & 4.23 & 3.91 & 3.94 & 3.58 & 3.11\\
+Sao Tome and Principe & 5.04 & 4.82 & 4.47 & 4.19 & 3.88 & 3.51\\
+Senegal & 4.81 & 4.86 & 4.5 & 4.3 & 4.09 & 3.71\\
+Seychelles & 3.64 & 2.59 & 2.06 & 1.98 & 2.03 & 1.99\\
+\addlinespace
+Sierra Leone & 2.68 & 3.43 & 3.7 & 3.58 & 3.25 & 2.83\\
+Somalia & 4.27 & 4.84 & 4.82 & 4.7 & 4.5 & 4.13\\
+South Africa & 3.65 & 3.1 & 2.43 & 2.07 & 1.97 & 1.88\\
+South Sudan & 3.29 & 3.96 & 4.21 & 4.04 & 3.72 & 3.33\\
+Togo & 4.79 & 4.47 & 4.06 & 3.78 & 3.47 & 3.17\\
+\addlinespace
+Uganda & 4.84 & 4.88 & 5.04 & 4.86 & 4.18 & 3.45\\
+United Republic of Tanzania & 4.64 & 4.48 & 4.37 & 4.29 & 4.07 & 3.73\\
+Zambia & 4.89 & 4.52 & 4.37 & 4.3 & 4 & 3.58\\
+Zimbabwe & 4.98 & 3.96 & 3.11 & 2.97 & 3.08 & 2.78\\*
+\end{longtable}
+\endgroup{}
