--- a/Output/tabS10.tex
+++ b/Output/tabS10.tex
@@ -1,11 +1,20 @@
-\begin{table}
+\begingroup\fontsize{7}{9}\selectfont
 
-\caption{\label{tab:S10}Number of children expected to live longer than their mothers as a share of the woman's cohort TFR. Regional estimates show the median value and IQR in parenthesis.}
-\centering
-\begin{tabular}[t]{lllllll}
+\begin{longtable}[t]{lllllll}
+\caption{\label{tab:S10}Number of children expected to live longer than their mothers as a share of the woman's cohort TFR. Regional estimates show the median value and IQR in parenthesis.}\\
 \toprule
 Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
 \midrule
+\endfirsthead
+\caption[]{Number of children expected to live longer than their mothers as a share of the woman's cohort TFR. Regional estimates show the median value and IQR in parenthesis. \textit{(continued)}}\\
+\toprule
+Birth Cohort & 1950 & 1960 & 1970 & 1980 & 1990 & 1999\\
+\midrule
+\endhead
+\
+\endfoot
+\bottomrule
+\endlastfoot
 australia\_new zealand & 0.92 (0) & 0.93 (0) & 0.95 (0) & 0.95 (0) & 0.96 (0) & 0.97 (0)\\
 australia & 0.92 & 0.93 & 0.95 & 0.96 & 0.96 & 0.97\\
 new zealand & 0.91 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
@@ -40,7 +49,221 @@ dem people's republic of korea & 0.89 & 0.89 & 0.87 & 0.9 & 0.93 & 0.93\\
 indonesia & 0.81 & 0.85 & 0.89 & 0.91 & 0.91 & 0.92\\
 japan & 0.93 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
 lao people's democratic republic & 0.75 & 0.79 & 0.83 & 0.87 & 0.9 & 0.92\\
-... & ... & ... & ... & ... & ... & ...\\
-\bottomrule
-\end{tabular}
-\end{table}
+malaysia & 0.92 & 0.92 & 0.93 & 0.93 & 0.94 & 0.94\\
+\addlinespace
+mongolia & 0.8 & 0.82 & 0.87 & 0.92 & 0.92 & 0.92\\
+myanmar & 0.8 & 0.82 & 0.85 & 0.88 & 0.9 & 0.9\\
+philippines & 0.85 & 0.86 & 0.88 & 0.88 & 0.88 & 0.89\\
+republic of korea & 0.92 & 0.93 & 0.94 & 0.96 & 0.96 & 0.97\\
+singapore & 0.94 & 0.95 & 0.95 & 0.95 & 0.96 & 0.96\\
+\addlinespace
+thailand & 0.85 & 0.87 & 0.89 & 0.9 & 0.92 & 0.92\\
+timor-leste & 0.69 & 0.76 & 0.85 & 0.9 & 0.92 & 0.92\\
+viet nam & 0.87 & 0.88 & 0.88 & 0.89 & 0.9 & 0.91\\
+europe and northern america & 0.91 (0) & 0.92 (0) & 0.93 (0) & 0.94 (0) & 0.95 (0) & 0.96 (0)\\
+albania & 0.9 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
+\addlinespace
+austria & 0.91 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+belarus & 0.88 & 0.86 & 0.87 & 0.9 & 0.92 & 0.92\\
+belgium & 0.91 & 0.92 & 0.94 & 0.95 & 0.95 & 0.96\\
+bosnia and herzegovina & 0.91 & 0.93 & 0.93 & 0.93 & 0.94 & 0.95\\
+bulgaria & 0.9 & 0.87 & 0.88 & 0.91 & 0.92 & 0.93\\
+\addlinespace
+canada & 0.92 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
+channel islands & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+croatia & 0.92 & 0.92 & 0.93 & 0.94 & 0.95 & 0.96\\
+czechia & 0.91 & 0.91 & 0.92 & 0.94 & 0.95 & 0.95\\
+denmark & 0.92 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
+\addlinespace
+estonia & 0.9 & 0.88 & 0.89 & 0.92 & 0.93 & 0.94\\
+finland & 0.92 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
+france & 0.9 & 0.92 & 0.93 & 0.94 & 0.94 & 0.95\\
+germany & 0.92 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+greece & 0.91 & 0.92 & 0.93 & 0.95 & 0.95 & 0.96\\
+\addlinespace
+hungary & 0.9 & 0.9 & 0.91 & 0.93 & 0.94 & 0.94\\
+iceland & 0.93 & 0.95 & 0.96 & 0.96 & 0.97 & 0.97\\
+ireland & 0.94 & 0.94 & 0.96 & 0.96 & 0.97 & 0.97\\
+italy & 0.93 & 0.94 & 0.96 & 0.96 & 0.97 & 0.97\\
+latvia & 0.88 & 0.85 & 0.86 & 0.9 & 0.91 & 0.92\\
+\addlinespace
+lithuania & 0.88 & 0.86 & 0.86 & 0.88 & 0.91 & 0.91\\
+luxembourg & 0.92 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+malta & 0.94 & 0.94 & 0.95 & 0.95 & 0.96 & 0.96\\
+montenegro & 0.93 & 0.93 & 0.93 & 0.94 & 0.95 & 0.96\\
+netherlands & 0.93 & 0.95 & 0.96 & 0.96 & 0.97 & 0.97\\
+\addlinespace
+north macedonia & 0.9 & 0.91 & 0.93 & 0.94 & 0.95 & 0.95\\
+norway & 0.92 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+poland & 0.9 & 0.9 & 0.9 & 0.92 & 0.93 & 0.93\\
+portugal & 0.9 & 0.93 & 0.94 & 0.95 & 0.96 & 0.96\\
+republic of moldova & 0.88 & 0.87 & 0.88 & 0.88 & 0.91 & 0.91\\
+\addlinespace
+romania & 0.89 & 0.89 & 0.89 & 0.92 & 0.93 & 0.93\\
+russian federation & 0.86 & 0.82 & 0.84 & 0.87 & 0.89 & 0.9\\
+serbia & 0.9 & 0.91 & 0.92 & 0.93 & 0.94 & 0.95\\
+slovakia & 0.91 & 0.89 & 0.91 & 0.93 & 0.94 & 0.94\\
+slovenia & 0.91 & 0.91 & 0.93 & 0.95 & 0.96 & 0.96\\
+\addlinespace
+spain & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+sweden & 0.93 & 0.95 & 0.95 & 0.96 & 0.97 & 0.97\\
+switzerland & 0.93 & 0.95 & 0.95 & 0.96 & 0.97 & 0.97\\
+ukraine & 0.87 & 0.84 & 0.85 & 0.88 & 0.89 & 0.9\\
+united kingdom & 0.91 & 0.93 & 0.94 & 0.95 & 0.95 & 0.96\\
+\addlinespace
+united states of america & 0.88 & 0.9 & 0.9 & 0.91 & 0.92 & 0.93\\
+latin america and the caribbean & 0.88 (0.1) & 0.89 (0) & 0.89 (0) & 0.9 (0) & 0.91 (0) & 0.92 (0)\\
+antigua and barbuda & 0.9 & 0.91 & 0.92 & 0.93 & 0.93 & 0.94\\
+argentina & 0.89 & 0.9 & 0.91 & 0.92 & 0.92 & 0.93\\
+aruba & 0.92 & 0.92 & 0.92 & 0.93 & 0.94 & 0.95\\
+\addlinespace
+bahamas & 0.88 & 0.88 & 0.89 & 0.9 & 0.91 & 0.92\\
+barbados & 0.91 & 0.91 & 0.91 & 0.92 & 0.92 & 0.94\\
+belize & 0.86 & 0.86 & 0.87 & 0.88 & 0.89 & 0.9\\
+bolivia (plurinational state of) & 0.72 & 0.78 & 0.83 & 0.86 & 0.88 & 0.89\\
+brazil & 0.84 & 0.86 & 0.88 & 0.9 & 0.91 & 0.92\\
+\addlinespace
+chile & 0.89 & 0.93 & 0.93 & 0.93 & 0.94 & 0.95\\
+colombia & 0.86 & 0.88 & 0.9 & 0.9 & 0.91 & 0.92\\
+costa rica & 0.9 & 0.92 & 0.92 & 0.92 & 0.93 & 0.93\\
+cuba & 0.9 & 0.91 & 0.92 & 0.92 & 0.92 & 0.93\\
+curaçao & 0.9 & 0.91 & 0.91 & 0.92 & 0.93 & 0.94\\
+\addlinespace
+dominican republic & 0.83 & 0.86 & 0.87 & 0.88 & 0.88 & 0.89\\
+ecuador & 0.83 & 0.87 & 0.89 & 0.91 & 0.92 & 0.92\\
+el salvador & 0.78 & 0.83 & 0.87 & 0.89 & 0.88 & 0.89\\
+french guiana & 0.91 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
+grenada & 0.91 & 0.91 & 0.91 & 0.9 & 0.91 & 0.91\\
+\addlinespace
+guadeloupe & 0.91 & 0.92 & 0.93 & 0.93 & 0.94 & 0.94\\
+guatemala & 0.8 & 0.85 & 0.87 & 0.89 & 0.9 & 0.91\\
+guyana & 0.81 & 0.82 & 0.83 & 0.84 & 0.85 & 0.86\\
+haiti & 0.77 & 0.79 & 0.81 & 0.83 & 0.85 & 0.86\\
+honduras & 0.82 & 0.86 & 0.88 & 0.89 & 0.9 & 0.91\\
+\addlinespace
+jamaica & 0.9 & 0.9 & 0.9 & 0.9 & 0.91 & 0.92\\
+martinique & 0.91 & 0.93 & 0.94 & 0.94 & 0.95 & 0.95\\
+mexico & 0.87 & 0.89 & 0.89 & 0.9 & 0.91 & 0.91\\
+nicaragua & 0.81 & 0.84 & 0.88 & 0.9 & 0.9 & 0.91\\
+panama & 0.87 & 0.88 & 0.89 & 0.89 & 0.9 & 0.91\\
+\addlinespace
+paraguay & 0.86 & 0.87 & 0.88 & 0.89 & 0.9 & 0.91\\
+peru & 0.82 & 0.86 & 0.9 & 0.92 & 0.93 & 0.93\\
+puerto rico & 0.89 & 0.89 & 0.89 & 0.9 & 0.91 & 0.92\\
+saint lucia & 0.91 & 0.92 & 0.9 & 0.9 & 0.91 & 0.92\\
+saint vincent and the grenadines & 0.88 & 0.9 & 0.9 & 0.89 & 0.89 & 0.9\\
+\addlinespace
+suriname & 0.85 & 0.86 & 0.88 & 0.89 & 0.9 & 0.9\\
+trinidad and tobago & 0.88 & 0.88 & 0.88 & 0.89 & 0.89 & 0.91\\
+united states virgin islands & 0.92 & 0.93 & 0.94 & 0.95 & 0.95 & 0.96\\
+uruguay & 0.88 & 0.89 & 0.91 & 0.92 & 0.92 & 0.93\\
+venezuela (bolivarian republic of) & 0.88 & 0.88 & 0.88 & 0.88 & 0.88 & 0.88\\
+\addlinespace
+northern africa and western asia & 0.87 (0.1) & 0.91 (0.1) & 0.93 (0.1) & 0.94 (0) & 0.94 (0) & 0.95 (0)\\
+algeria & 0.82 & 0.89 & 0.93 & 0.94 & 0.94 & 0.94\\
+armenia & 0.87 & 0.88 & 0.88 & 0.9 & 0.92 & 0.93\\
+azerbaijan & 0.83 & 0.85 & 0.87 & 0.9 & 0.92 & 0.92\\
+bahrain & 0.93 & 0.95 & 0.95 & 0.95 & 0.95 & 0.95\\
+\addlinespace
+cyprus & 0.94 & 0.95 & 0.95 & 0.95 & 0.96 & 0.96\\
+egypt & 0.78 & 0.85 & 0.91 & 0.93 & 0.93 & 0.93\\
+georgia & 0.86 & 0.87 & 0.86 & 0.89 & 0.91 & 0.92\\
+iraq & 0.88 & 0.9 & 0.9 & 0.9 & 0.91 & 0.91\\
+israel & 0.93 & 0.94 & 0.95 & 0.96 & 0.96 & 0.97\\
+\addlinespace
+jordan & 0.91 & 0.92 & 0.93 & 0.93 & 0.93 & 0.94\\
+kuwait & 0.93 & 0.95 & 0.96 & 0.95 & 0.96 & 0.96\\
+lebanon & 0.91 & 0.92 & 0.94 & 0.95 & 0.96 & 0.96\\
+libya & 0.89 & 0.92 & 0.92 & 0.93 & 0.94 & 0.94\\
+morocco & 0.82 & 0.87 & 0.92 & 0.94 & 0.95 & 0.96\\
+\addlinespace
+oman & 0.86 & 0.91 & 0.94 & 0.95 & 0.95 & 0.95\\
+qatar & 0.93 & 0.95 & 0.95 & 0.96 & 0.96 & 0.96\\
+saudi arabia & 0.86 & 0.92 & 0.94 & 0.95 & 0.95 & 0.96\\
+state of palestine & 0.88 & 0.91 & 0.93 & 0.93 & 0.93 & 0.94\\
+sudan & 0.77 & 0.79 & 0.82 & 0.85 & 0.88 & 0.89\\
+\addlinespace
+syrian arab republic & 0.89 & 0.9 & 0.92 & 0.94 & 0.95 & 0.95\\
+tunisia & 0.86 & 0.92 & 0.94 & 0.95 & 0.95 & 0.95\\
+turkey & 0.77 & 0.84 & 0.89 & 0.93 & 0.94 & 0.95\\
+united arab emirates & 0.92 & 0.95 & 0.95 & 0.95 & 0.95 & 0.97\\
+western sahara & 0.75 & 0.83 & 0.88 & 0.91 & 0.93 & 0.94\\
+\addlinespace
+yemen & 0.78 & 0.83 & 0.86 & 0.88 & 0.89 & 0.9\\
+oceania (exc. Aus and NZ) & 0.89 (0) & 0.92 (0) & 0.92 (0) & 0.92 (0) & 0.92 (0) & 0.93 (0)\\
+fiji & 0.87 & 0.88 & 0.89 & 0.9 & 0.9 & 0.9\\
+french polynesia & 0.89 & 0.92 & 0.94 & 0.94 & 0.94 & 0.94\\
+guam & 0.91 & 0.93 & 0.93 & 0.94 & 0.95 & 0.95\\
+\addlinespace
+kiribati & 0.82 & 0.84 & 0.86 & 0.88 & 0.89 & 0.9\\
+micronesia (fed states of) & 0.89 & 0.89 & 0.9 & 0.9 & 0.92 & 0.93\\
+new caledonia & 0.9 & 0.92 & 0.93 & 0.94 & 0.95 & 0.95\\
+papua new guinea & 0.84 & 0.85 & 0.86 & 0.88 & 0.89 & 0.9\\
+samoa & 0.9 & 0.92 & 0.94 & 0.93 & 0.93 & 0.94\\
+\addlinespace
+solomon islands & 0.89 & 0.91 & 0.92 & 0.91 & 0.91 & 0.92\\
+tonga & 0.92 & 0.92 & 0.92 & 0.92 & 0.92 & 0.92\\
+vanuatu & 0.88 & 0.92 & 0.93 & 0.93 & 0.92 & 0.93\\
+sub-saharan africa & 0.76 (0.1) & 0.77 (0.1) & 0.79 (0.1) & 0.84 (0.1) & 0.88 (0) & 0.89 (0)\\
+angola & 0.71 & 0.7 & 0.74 & 0.8 & 0.86 & 0.89\\
+\addlinespace
+benin & 0.73 & 0.75 & 0.78 & 0.81 & 0.84 & 0.85\\
+botswana & 0.83 & 0.86 & 0.87 & 0.86 & 0.88 & 0.9\\
+burkina faso & 0.74 & 0.74 & 0.76 & 0.81 & 0.87 & 0.89\\
+burundi & 0.74 & 0.75 & 0.78 & 0.83 & 0.88 & 0.89\\
+cabo verde & 0.86 & 0.89 & 0.9 & 0.91 & 0.92 & 0.92\\
+\addlinespace
+cameroon & 0.76 & 0.77 & 0.78 & 0.81 & 0.85 & 0.87\\
+central african republic & 0.77 & 0.77 & 0.75 & 0.77 & 0.8 & 0.83\\
+chad & 0.7 & 0.72 & 0.74 & 0.76 & 0.79 & 0.81\\
+comoros & 0.78 & 0.82 & 0.85 & 0.86 & 0.88 & 0.89\\
+congo & 0.82 & 0.82 & 0.83 & 0.85 & 0.89 & 0.9\\
+\addlinespace
+côte d'ivoire & 0.81 & 0.79 & 0.79 & 0.81 & 0.84 & 0.86\\
+democratic republic of the congo & 0.71 & 0.73 & 0.76 & 0.8 & 0.83 & 0.85\\
+djibouti & 0.79 & 0.81 & 0.83 & 0.86 & 0.89 & 0.91\\
+equatorial guinea & 0.72 & 0.75 & 0.78 & 0.81 & 0.84 & 0.86\\
+eritrea & 0.76 & 0.78 & 0.85 & 0.9 & 0.91 & 0.91\\
+\addlinespace
+eswatini & 0.82 & 0.83 & 0.84 & 0.82 & 0.85 & 0.88\\
+ethiopia & 0.72 & 0.73 & 0.79 & 0.86 & 0.89 & 0.9\\
+gabon & 0.8 & 0.83 & 0.85 & 0.86 & 0.88 & 0.9\\
+gambia & 0.74 & 0.78 & 0.82 & 0.85 & 0.88 & 0.89\\
+ghana & 0.78 & 0.8 & 0.83 & 0.86 & 0.89 & 0.9\\
+\addlinespace
+guinea & 0.69 & 0.72 & 0.76 & 0.82 & 0.87 & 0.88\\
+guinea-bissau & 0.71 & 0.73 & 0.76 & 0.81 & 0.86 & 0.87\\
+kenya & 0.8 & 0.81 & 0.83 & 0.86 & 0.89 & 0.9\\
+lesotho & 0.8 & 0.82 & 0.82 & 0.8 & 0.82 & 0.86\\
+liberia & 0.7 & 0.7 & 0.74 & 0.83 & 0.88 & 0.89\\
+\addlinespace
+madagascar & 0.74 & 0.77 & 0.82 & 0.87 & 0.9 & 0.91\\
+malawi & 0.72 & 0.74 & 0.78 & 0.85 & 0.89 & 0.91\\
+mali & 0.73 & 0.74 & 0.74 & 0.79 & 0.84 & 0.86\\
+mauritania & 0.79 & 0.82 & 0.84 & 0.85 & 0.87 & 0.88\\
+mauritius & 0.89 & 0.9 & 0.91 & 0.9 & 0.91 & 0.92\\
+\addlinespace
+mayotte & 0.92 & 0.92 & 0.93 & 0.93 & 0.93 & 0.93\\
+mozambique & 0.68 & 0.71 & 0.76 & 0.83 & 0.88 & 0.9\\
+namibia & 0.84 & 0.84 & 0.86 & 0.88 & 0.88 & 0.9\\
+niger & 0.64 & 0.65 & 0.72 & 0.81 & 0.87 & 0.89\\
+nigeria & 0.74 & 0.72 & 0.73 & 0.78 & 0.82 & 0.84\\
+\addlinespace
+réunion & 0.91 & 0.93 & 0.93 & 0.93 & 0.93 & 0.94\\
+rwanda & 0.65 & 0.63 & 0.71 & 0.87 & 0.94 & 0.93\\
+sao tome and principe & 0.83 & 0.84 & 0.86 & 0.89 & 0.92 & 0.92\\
+senegal & 0.73 & 0.79 & 0.83 & 0.88 & 0.91 & 0.92\\
+seychelles & 0.88 & 0.9 & 0.9 & 0.9 & 0.9 & 0.91\\
+\addlinespace
+sierra leone & 0.77 & 0.74 & 0.72 & 0.77 & 0.82 & 0.85\\
+somalia & 0.74 & 0.74 & 0.76 & 0.79 & 0.81 & 0.83\\
+south africa & 0.83 & 0.84 & 0.86 & 0.86 & 0.87 & 0.89\\
+south sudan & 0.73 & 0.72 & 0.76 & 0.81 & 0.84 & 0.85\\
+togo & 0.77 & 0.78 & 0.8 & 0.83 & 0.86 & 0.88\\
+\addlinespace
+uganda & 0.75 & 0.75 & 0.79 & 0.84 & 0.88 & 0.89\\
+united republic of tanzania & 0.75 & 0.77 & 0.81 & 0.86 & 0.89 & 0.9\\
+zambia & 0.76 & 0.75 & 0.78 & 0.84 & 0.89 & 0.9\\
+zimbabwe & 0.81 & 0.81 & 0.84 & 0.84 & 0.87 & 0.89\\*
+\end{longtable}
+\endgroup{}
