--- a/Output/tabS6.tex
+++ b/Output/tabS6.tex
@@ -1,48 +1,273 @@
-\begin{table}[!h]
+\begingroup\fontsize{7}{9}\selectfont
 
-\caption{\label{tab:S6}Full country results for the expected number of children surviving for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis.}
-\centering
-\begin{tabular}[t]{llllllllll}
+\begin{longtable}[t]{llllllllll}
+\caption{\label{tab:S6}Full country results for the expected number of children surviving for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis.}\\
 \toprule
 \multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
 \cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
 Age & 20 & 45 & 100 & 20 & 45 & 100 & 20 & 45 & 100\\
 \midrule
-australia\_new zealand & 0.7 (0.1) & 2.32 (0.1) & 1.83 (0.1) & 0.3 (0) & 2.01 (0) & 1.8 (0) & 0.21 (0) & 1.83 (0) & 1.72 (0)\\
-australia & 0.62 & 2.2 & 1.77 & 0.26 & 1.96 & 1.77 & 0.17 & 1.82 & 1.72\\
-new zealand & 0.78 & 2.44 & 1.9 & 0.35 & 2.06 & 1.82 & 0.25 & 1.84 & 1.71\\
-central and southern asia & 0.9 (0.2) & 4.12 (1.2) & 2.31 (0.6) & 0.88 (0.2) & 2.7 (0.4) & 1.66 (0.4) & 0.58 (0.2) & 2.11 (0.8) & 1.57 (0.5)\\
-afghanistan & 0.97 & 4.94 & 2.52 & 1.22 & 5.3 & 2.89 & 0.81 & 3.18 & 1.92\\
-\addlinespace
-bangladesh & 1.24 & 4.13 & 2.48 & 0.94 & 2.48 & 1.63 & 0.64 & 1.68 & 1.23\\
-bhutan & 0.9 & 4.34 & 2.63 & 0.91 & 2.8 & 1.79 & 0.36 & 1.79 & 1.32\\
-india & 0.9 & 3.34 & 1.7 & 0.91 & 2.68 & 1.47 & 0.5 & 2.1 & 1.4\\
-iran (islamic republic of) & 1.04 & 4.77 & 3.44 & 0.63 & 2.13 & 1.63 & 0.37 & 2.03 & 1.75\\
-kazakhstan & 0.68 & 2.62 & 1.41 & 0.64 & 2.3 & 1.5 & 0.56 & 2.51 & 1.87\\
-\addlinespace
-kyrgyzstan & 0.86 & 3.51 & 1.76 & 0.82 & 2.8 & 1.65 & 0.66 & 2.67 & 1.84\\
-maldives & 1.21 & 5.12 & 3.95 & 0.86 & 2.69 & 2.17 & 0.3 & 1.74 & 1.54\\
-nepal & 0.87 & 3.68 & 2.13 & 1.07 & 2.91 & 1.75 & 0.64 & 1.57 & 1.06\\
-pakistan & 0.94 & 4.9 & 2.62 & 0.86 & 3.81 & 2.04 & 0.61 & 2.72 & 1.6\\
-sri lanka & 0.68 & 3.05 & 2.1 & 0.38 & 2.11 & 1.66 & 0.32 & 2 & 1.68\\
-\addlinespace
-tajikistan & 1.12 & 4.74 & 2.5 & 0.9 & 3.3 & 2.01 & 1.03 & 2.95 & 1.93\\
-turkmenistan & 0.84 & 4.11 & 1.95 & 0.64 & 2.61 & 1.32 & 0.53 & 2.43 & 1.43\\
-uzbekistan & 0.89 & 4.02 & 2.05 & 0.93 & 2.72 & 1.44 & 0.62 & 2.12 & 1.33\\
-eastern and south-eastern asia & 0.76 (0.3) & 3.38 (1.6) & 1.94 (0.5) & 0.46 (0.4) & 1.95 (0.9) & 1.35 (0.4) & 0.35 (0.4) & 1.84 (0.6) & 1.44 (0.2)\\
-brunei darussalam & 1.07 & 4.18 & 2.67 & 0.46 & 2.15 & 1.58 & 0.19 & 1.73 & 1.43\\
-\addlinespace
-cambodia & 0.93 & 3.73 & 2.17 & 0.75 & 2.81 & 1.68 & 0.62 & 2.04 & 1.32\\
-china & 0.82 & 2.72 & 1.72 & 0.48 & 1.69 & 1.26 & 0.37 & 1.79 & 1.49\\
-china, hong kong sar & 0.53 & 2.28 & 1.89 & 0.13 & 1.17 & 1.06 & 0.06 & 1.61 & 1.52\\
-china, macao sar & 0.21 & 1.47 & 1.26 & 0.14 & 1.03 & 0.93 & 0.13 & 1.36 & 1.27\\
-china, taiwan province of china & 0.76 & 2.61 & 1.87 & 0.3 & 1.55 & 1.27 & 0.06 & 1.48 & 1.35\\
-\addlinespace
-dem people's republic of korea & 0.36 & 2.48 & 1.38 & 0.18 & 1.92 & 1.34 & 0.13 & 1.86 & 1.47\\
-indonesia & 1.06 & 3.6 & 1.96 & 0.56 & 2.27 & 1.5 & 0.49 & 2.03 & 1.51\\
-japan & 0.33 & 1.96 & 1.62 & 0.14 & 1.43 & 1.29 & 0.09 & 1.52 & 1.44\\
-lao people's democratic republic & 0.9 & 4.42 & 2.38 & 0.91 & 3.14 & 1.77 & 0.65 & 2.11 & 1.33\\
-... & ... & ... & ... & ... & ... & ... & ... & ... & ...\\
+\endfirsthead
+\caption[]{Full country results for the expected number of children surviving for a woman surviving to ages 20, 45, and 100. Regional estimates show the median value and IQR in parenthesis. \textit{(continued)}}\\
+\toprule
+\multicolumn{1}{c}{Birth cohort} & \multicolumn{3}{c}{1950} & \multicolumn{3}{c}{1975} & \multicolumn{3}{c}{1999} \\
+\cmidrule(l{3pt}r{3pt}){1-1} \cmidrule(l{3pt}r{3pt}){2-4} \cmidrule(l{3pt}r{3pt}){5-7} \cmidrule(l{3pt}r{3pt}){8-10}
+Age & 20 & 45 & 100 & 20 & 45 & 100 & 20 & 45 & 100\\
+\midrule
+\endhead
+\
+\endfoot
 \bottomrule
-\end{tabular}
-\end{table}
+\endlastfoot
+Australia/New Zealand & 0.7 (0.1) & 2.32 (0.1) & 1.83 (0.1) & 0.3 (0) & 2.01 (0) & 1.8 (0) & 0.21 (0) & 1.83 (0) & 1.72 (0)\\
+Australia & 0.62 & 2.2 & 1.77 & 0.26 & 1.96 & 1.77 & 0.17 & 1.82 & 1.72\\
+New Zealand & 0.78 & 2.44 & 1.9 & 0.35 & 2.06 & 1.82 & 0.25 & 1.84 & 1.71\\
+Central and Southern Asia & 0.9 (0.2) & 4.12 (1.2) & 2.31 (0.6) & 0.88 (0.2) & 2.7 (0.4) & 1.66 (0.4) & 0.58 (0.2) & 2.11 (0.8) & 1.57 (0.5)\\
+Afghanistan & 0.97 & 4.94 & 2.52 & 1.22 & 5.3 & 2.89 & 0.81 & 3.18 & 1.92\\
+\addlinespace
+Bangladesh & 1.24 & 4.13 & 2.48 & 0.94 & 2.48 & 1.63 & 0.64 & 1.68 & 1.23\\
+Bhutan & 0.9 & 4.34 & 2.63 & 0.91 & 2.8 & 1.79 & 0.36 & 1.79 & 1.32\\
+India & 0.9 & 3.34 & 1.7 & 0.91 & 2.68 & 1.47 & 0.5 & 2.1 & 1.4\\
+Iran (Islamic Republic of) & 1.04 & 4.77 & 3.44 & 0.63 & 2.13 & 1.63 & 0.37 & 2.03 & 1.75\\
+Kazakhstan & 0.68 & 2.62 & 1.41 & 0.64 & 2.3 & 1.5 & 0.56 & 2.51 & 1.87\\
+\addlinespace
+Kyrgyzstan & 0.86 & 3.51 & 1.76 & 0.82 & 2.8 & 1.65 & 0.66 & 2.67 & 1.84\\
+Maldives & 1.21 & 5.12 & 3.95 & 0.86 & 2.69 & 2.17 & 0.3 & 1.74 & 1.54\\
+Nepal & 0.87 & 3.68 & 2.13 & 1.07 & 2.91 & 1.75 & 0.64 & 1.57 & 1.06\\
+Pakistan & 0.94 & 4.9 & 2.62 & 0.86 & 3.81 & 2.04 & 0.61 & 2.72 & 1.6\\
+Sri Lanka & 0.68 & 3.05 & 2.1 & 0.38 & 2.11 & 1.66 & 0.32 & 2 & 1.68\\
+\addlinespace
+Tajikistan & 1.12 & 4.74 & 2.5 & 0.9 & 3.3 & 2.01 & 1.03 & 2.95 & 1.93\\
+Turkmenistan & 0.84 & 4.11 & 1.95 & 0.64 & 2.61 & 1.32 & 0.53 & 2.43 & 1.43\\
+Uzbekistan & 0.89 & 4.02 & 2.05 & 0.93 & 2.72 & 1.44 & 0.62 & 2.12 & 1.33\\
+Eastern and South-Eastern Asia & 0.76 (0.3) & 3.38 (1.6) & 1.94 (0.5) & 0.46 (0.4) & 1.95 (0.9) & 1.35 (0.4) & 0.35 (0.4) & 1.84 (0.6) & 1.44 (0.2)\\
+Brunei Darussalam & 1.07 & 4.18 & 2.67 & 0.46 & 2.15 & 1.58 & 0.19 & 1.73 & 1.43\\
+\addlinespace
+Cambodia & 0.93 & 3.73 & 2.17 & 0.75 & 2.81 & 1.68 & 0.62 & 2.04 & 1.32\\
+China & 0.82 & 2.72 & 1.72 & 0.48 & 1.69 & 1.26 & 0.37 & 1.79 & 1.49\\
+China, Hong Kong SAR & 0.53 & 2.28 & 1.89 & 0.13 & 1.17 & 1.06 & 0.06 & 1.61 & 1.52\\
+China, Macao SAR & 0.21 & 1.47 & 1.26 & 0.14 & 1.03 & 0.93 & 0.13 & 1.36 & 1.27\\
+China, Taiwan Province of China & 0.76 & 2.61 & 1.87 & 0.3 & 1.55 & 1.27 & 0.06 & 1.48 & 1.35\\
+\addlinespace
+Dem. People's Republic of Korea & 0.36 & 2.48 & 1.38 & 0.18 & 1.92 & 1.34 & 0.13 & 1.86 & 1.47\\
+Indonesia & 1.06 & 3.6 & 1.96 & 0.56 & 2.27 & 1.5 & 0.49 & 2.03 & 1.51\\
+Japan & 0.33 & 1.96 & 1.62 & 0.14 & 1.43 & 1.29 & 0.09 & 1.52 & 1.44\\
+Lao People's Democratic Republic & 0.9 & 4.42 & 2.38 & 0.91 & 3.14 & 1.77 & 0.65 & 2.11 & 1.33\\
+Malaysia & 0.83 & 4.03 & 2.65 & 0.42 & 2.58 & 1.94 & 0.17 & 1.86 & 1.54\\
+\addlinespace
+Mongolia & 0.71 & 4.12 & 2.14 & 0.6 & 2.39 & 1.45 & 0.52 & 2.6 & 1.87\\
+Myanmar & 0.87 & 3.85 & 1.83 & 0.46 & 2.3 & 1.28 & 0.35 & 1.84 & 1.17\\
+Philippines & 0.82 & 4.4 & 2.52 & 0.69 & 3.25 & 2.05 & 0.52 & 2.19 & 1.56\\
+Republic of Korea & 0.57 & 2.48 & 1.96 & 0.2 & 1.57 & 1.38 & 0.04 & 1.26 & 1.2\\
+Singapore & 0.52 & 2.14 & 1.71 & 0.16 & 1.44 & 1.28 & 0.07 & 1.27 & 1.18\\
+\addlinespace
+Thailand & 0.79 & 2.88 & 1.89 & 0.47 & 1.59 & 1.18 & 0.36 & 1.4 & 1.14\\
+Timor-Leste & 0.69 & 3.38 & 1.94 & 0.8 & 4.58 & 2.94 & 0.56 & 3.06 & 2.15\\
+Viet Nam & 0.57 & 4.03 & 2.69 & 0.58 & 1.95 & 1.35 & 0.42 & 2.32 & 1.84\\
+Europe and Northern America & 0.54 (0.1) & 1.88 (0.3) & 1.32 (0.3) & 0.35 (0.2) & 1.64 (0.3) & 1.34 (0.4) & 0.15 (0.1) & 1.71 (0.2) & 1.47 (0.2)\\
+Albania & 0.81 & 3.4 & 2.46 & 0.53 & 2.01 & 1.58 & 0.33 & 1.49 & 1.26\\
+\addlinespace
+Austria & 0.61 & 1.7 & 1.28 & 0.29 & 1.57 & 1.36 & 0.15 & 1.71 & 1.58\\
+Belarus & 0.53 & 1.84 & 1.01 & 0.52 & 1.5 & 0.98 & 0.29 & 1.93 & 1.52\\
+Belgium & 0.51 & 1.75 & 1.33 & 0.23 & 1.86 & 1.61 & 0.12 & 1.73 & 1.6\\
+Bosnia and Herzegovina & 0.66 & 2.04 & 1.29 & 0.44 & 1.55 & 1.15 & 0.15 & 1.34 & 1.14\\
+Bulgaria & 0.75 & 1.84 & 0.97 & 0.53 & 1.48 & 0.98 & 0.33 & 1.73 & 1.37\\
+\addlinespace
+Canada & 0.52 & 1.83 & 1.43 & 0.28 & 1.71 & 1.51 & 0.14 & 1.57 & 1.47\\
+Channel Islands & 0.34 & 1.57 & 1.27 & 0.19 & 1.55 & 1.38 & 0.13 & 1.58 & 1.47\\
+Croatia & 0.58 & 1.71 & 1.14 & 0.37 & 1.67 & 1.33 & 0.14 & 1.56 & 1.38\\
+Czechia & 0.69 & 1.94 & 1.3 & 0.45 & 1.66 & 1.31 & 0.17 & 1.79 & 1.59\\
+Denmark & 0.54 & 1.82 & 1.33 & 0.21 & 1.91 & 1.64 & 0.12 & 1.76 & 1.6\\
+\addlinespace
+Estonia & 0.54 & 1.83 & 1.21 & 0.46 & 1.72 & 1.32 & 0.16 & 1.83 & 1.58\\
+Finland & 0.44 & 1.74 & 1.36 & 0.23 & 1.85 & 1.61 & 0.14 & 1.48 & 1.37\\
+France & 0.54 & 2.03 & 1.59 & 0.2 & 1.99 & 1.74 & 0.14 & 1.83 & 1.69\\
+Germany & 0.52 & 1.58 & 1.17 & 0.23 & 1.51 & 1.3 & 0.13 & 1.75 & 1.62\\
+Greece & 0.54 & 1.99 & 1.54 & 0.25 & 1.51 & 1.31 & 0.1 & 1.39 & 1.29\\
+\addlinespace
+Hungary & 0.62 & 1.78 & 1.05 & 0.42 & 1.63 & 1.19 & 0.2 & 1.61 & 1.35\\
+Iceland & 0.78 & 2.48 & 1.96 & 0.37 & 2.17 & 1.93 & 0.17 & 1.78 & 1.69\\
+Ireland & 0.46 & 2.92 & 2.4 & 0.21 & 2.03 & 1.84 & 0.14 & 1.79 & 1.69\\
+Italy & 0.45 & 1.79 & 1.46 & 0.14 & 1.44 & 1.32 & 0.09 & 1.41 & 1.34\\
+Latvia & 0.48 & 1.7 & 0.97 & 0.44 & 1.56 & 1.05 & 0.23 & 1.85 & 1.45\\
+\addlinespace
+Lithuania & 0.5 & 1.89 & 1.12 & 0.5 & 1.64 & 1.11 & 0.16 & 1.87 & 1.5\\
+Luxembourg & 0.45 & 1.62 & 1.27 & 0.24 & 1.8 & 1.6 & 0.1 & 1.46 & 1.38\\
+Malta & 0.34 & 1.96 & 1.61 & 0.27 & 1.64 & 1.43 & 0.14 & 1.66 & 1.54\\
+Montenegro & 0.6 & 2.24 & 1.43 & 0.43 & 1.92 & 1.44 & 0.2 & 1.86 & 1.58\\
+Netherlands & 0.44 & 1.84 & 1.45 & 0.14 & 1.73 & 1.55 & 0.11 & 1.72 & 1.61\\
+\addlinespace
+North Macedonia & 0.67 & 2.18 & 1.29 & 0.56 & 1.84 & 1.29 & 0.21 & 1.62 & 1.36\\
+Norway & 0.56 & 1.98 & 1.55 & 0.28 & 1.98 & 1.75 & 0.14 & 1.72 & 1.61\\
+Poland & 0.57 & 2.04 & 1.38 & 0.46 & 1.62 & 1.23 & 0.18 & 1.58 & 1.35\\
+Portugal & 0.49 & 2 & 1.57 & 0.27 & 1.53 & 1.34 & 0.12 & 1.51 & 1.42\\
+Republic of Moldova & 0.56 & 2.08 & 1.01 & 0.63 & 1.55 & 0.83 & 0.28 & 1.37 & 0.97\\
+\addlinespace
+Romania & 0.74 & 2.11 & 1.23 & 0.47 & 1.46 & 1.02 & 0.32 & 1.71 & 1.39\\
+Russian Federation & 0.53 & 1.73 & 0.87 & 0.49 & 1.49 & 0.91 & 0.31 & 1.97 & 1.46\\
+Serbia & 0.67 & 2.07 & 1.22 & 0.49 & 1.83 & 1.3 & 0.2 & 1.56 & 1.31\\
+Slovakia & 0.72 & 2.15 & 1.35 & 0.52 & 1.64 & 1.22 & 0.22 & 1.64 & 1.39\\
+Slovenia & 0.6 & 1.8 & 1.32 & 0.32 & 1.61 & 1.37 & 0.13 & 1.74 & 1.6\\
+\addlinespace
+Spain & 0.4 & 2.1 & 1.72 & 0.13 & 1.4 & 1.27 & 0.1 & 1.54 & 1.47\\
+Sweden & 0.49 & 1.89 & 1.52 & 0.24 & 1.91 & 1.72 & 0.15 & 1.83 & 1.72\\
+Switzerland & 0.42 & 1.72 & 1.42 & 0.17 & 1.61 & 1.47 & 0.09 & 1.67 & 1.6\\
+Ukraine & 0.57 & 1.71 & 0.8 & 0.53 & 1.38 & 0.79 & 0.32 & 1.56 & 1.12\\
+United Kingdom & 0.61 & 1.95 & 1.47 & 0.33 & 1.82 & 1.56 & 0.2 & 1.8 & 1.64\\
+\addlinespace
+United States of America & 0.62 & 1.87 & 1.29 & 0.5 & 2.04 & 1.59 & 0.27 & 1.93 & 1.64\\
+Latin America and the Caribbean & 0.97 (0.4) & 3.53 (1.2) & 2.17 (0.8) & 0.69 (0.2) & 2.33 (0.5) & 1.63 (0.5) & 0.46 (0.2) & 1.88 (0.4) & 1.46 (0.4)\\
+Antigua and Barbuda & 0.98 & 2.29 & 1.37 & 0.55 & 1.99 & 1.45 & 0.42 & 1.88 & 1.5\\
+Argentina & 0.62 & 2.8 & 1.88 & 0.62 & 2.38 & 1.77 & 0.49 & 2.07 & 1.69\\
+Aruba & 0.63 & 2.34 & 1.51 & 0.46 & 1.74 & 1.28 & 0.31 & 2.07 & 1.73\\
+\addlinespace
+Bahamas & 0.79 & 2.71 & 1.51 & 0.58 & 2.08 & 1.34 & 0.38 & 1.7 & 1.27\\
+Barbados & 0.75 & 2.08 & 1.42 & 0.43 & 1.67 & 1.31 & 0.31 & 1.81 & 1.54\\
+Belize & 1.49 & 5.03 & 3.02 & 1.04 & 3.13 & 2.08 & 0.6 & 1.98 & 1.48\\
+Bolivia (Plurinational State of) & 0.82 & 3.74 & 2.33 & 0.8 & 3.07 & 2.07 & 0.56 & 2.27 & 1.69\\
+Brazil & 0.77 & 3.17 & 2.09 & 0.66 & 1.97 & 1.41 & 0.43 & 1.61 & 1.3\\
+\addlinespace
+Chile & 0.74 & 2.6 & 1.91 & 0.56 & 2.01 & 1.62 & 0.32 & 1.63 & 1.43\\
+Colombia & 0.94 & 3.32 & 2.27 & 0.74 & 2.16 & 1.6 & 0.47 & 1.62 & 1.31\\
+Costa Rica & 0.9 & 3.22 & 2.4 & 0.73 & 2.17 & 1.72 & 0.44 & 1.61 & 1.38\\
+Cuba & 0.96 & 2.16 & 1.37 & 0.49 & 1.55 & 1.17 & 0.44 & 1.49 & 1.22\\
+curaçao & 0.7 & 2.43 & 1.7 & 0.48 & 2.08 & 1.64 & 0.33 & 1.7 & 1.44\\
+\addlinespace
+Dominican Republic & 1.1 & 3.65 & 2.16 & 0.85 & 2.41 & 1.58 & 0.69 & 1.99 & 1.45\\
+Ecuador & 0.99 & 3.94 & 2.77 & 0.73 & 2.6 & 1.99 & 0.61 & 2.06 & 1.68\\
+El Salvador & 1.02 & 3.87 & 2.42 & 0.81 & 2.47 & 1.68 & 0.54 & 1.77 & 1.34\\
+French Guiana & 1.02 & 3.34 & 2.49 & 0.92 & 3.64 & 3.01 & 0.59 & 3.13 & 2.78\\
+Grenada & 0.95 & 3.86 & 2.17 & 0.66 & 2.4 & 1.48 & 0.36 & 1.85 & 1.32\\
+\addlinespace
+Guadeloupe & 0.77 & 3.03 & 2.33 & 0.35 & 2.2 & 1.87 & 0.26 & 2.04 & 1.82\\
+Guatemala & 1.13 & 4.86 & 3.25 & 1.03 & 3.72 & 2.71 & 0.62 & 2.38 & 1.9\\
+Guyana & 1.16 & 3.54 & 1.73 & 0.76 & 2.45 & 1.34 & 0.67 & 2.12 & 1.29\\
+Haiti & 0.62 & 4.14 & 2.24 & 0.68 & 3.17 & 1.79 & 0.47 & 2.27 & 1.42\\
+Honduras & 1.16 & 4.84 & 3.23 & 1.06 & 3.36 & 2.39 & 0.62 & 2.08 & 1.63\\
+\addlinespace
+Jamaica & 1.23 & 3.58 & 2.03 & 0.73 & 2.29 & 1.48 & 0.46 & 1.83 & 1.36\\
+Martinique & 0.72 & 2.61 & 2.05 & 0.34 & 2.01 & 1.73 & 0.17 & 1.84 & 1.68\\
+Mexico & 1.09 & 4.16 & 2.61 & 0.71 & 2.38 & 1.65 & 0.53 & 1.87 & 1.43\\
+Nicaragua & 1.28 & 4.6 & 2.92 & 0.98 & 2.72 & 1.89 & 0.63 & 2.06 & 1.6\\
+Panama & 1.14 & 3.52 & 2.43 & 0.75 & 2.45 & 1.87 & 0.65 & 2.14 & 1.75\\
+\addlinespace
+Paraguay & 0.98 & 4.36 & 2.74 & 0.83 & 2.94 & 1.94 & 0.56 & 2.05 & 1.5\\
+Peru & 0.94 & 3.97 & 2.81 & 0.67 & 2.53 & 1.98 & 0.46 & 1.99 & 1.67\\
+Puerto Rico & 0.8 & 2.44 & 1.72 & 0.6 & 1.77 & 1.36 & 0.33 & 1.19 & 1\\
+Saint Lucia & 1.26 & 4.08 & 2.57 & 0.73 & 2.02 & 1.39 & 0.32 & 1.28 & 1\\
+Saint Vincent and the Grenadines & 1.33 & 3.86 & 2.01 & 0.68 & 2.14 & 1.3 & 0.45 & 1.67 & 1.16\\
+\addlinespace
+Suriname & 1.27 & 3.77 & 1.84 & 0.83 & 2.69 & 1.57 & 0.54 & 2.18 & 1.5\\
+Trinidad and Tobago & 0.88 & 2.92 & 1.65 & 0.5 & 1.69 & 1.09 & 0.35 & 1.59 & 1.18\\
+United States Virgin Islands & 1.37 & 3.51 & 2.52 & 0.66 & 2.21 & 1.8 & 0.39 & 2.09 & 1.86\\
+Uruguay & 0.63 & 2.48 & 1.68 & 0.55 & 2.06 & 1.55 & 0.45 & 1.8 & 1.47\\
+Venezuela (Bolivarian Republic of) & 1.03 & 3.75 & 2.11 & 0.77 & 2.42 & 1.49 & 0.64 & 1.89 & 1.3\\
+\addlinespace
+Northern Africa and Western Asia & 1.03 (0.3) & 5.1 (2) & 3.12 (1.4) & 0.65 (0.3) & 2.65 (1.2) & 1.94 (0.7) & 0.33 (0.3) & 2.03 (0.6) & 1.71 (0.5)\\
+Algeria & 1.04 & 5.41 & 3.99 & 0.41 & 2.74 & 2.25 & 0.29 & 2.49 & 2.16\\
+Armenia & 0.74 & 2.27 & 1.28 & 0.73 & 1.79 & 1.13 & 0.39 & 1.87 & 1.45\\
+Azerbaijan & 0.76 & 2.98 & 1.61 & 0.65 & 1.86 & 1.08 & 0.64 & 1.78 & 1.18\\
+Bahrain & 1.03 & 4.6 & 3.13 & 0.45 & 2.45 & 1.88 & 0.31 & 1.77 & 1.46\\
+\addlinespace
+Cyprus & 0.51 & 2.22 & 1.7 & 0.41 & 1.83 & 1.53 & 0.14 & 1.34 & 1.21\\
+Egypt & 0.99 & 4.13 & 2.28 & 0.8 & 3.09 & 1.92 & 0.76 & 2.86 & 2.02\\
+Georgia & 0.61 & 1.99 & 1.05 & 0.6 & 1.66 & 1.05 & 0.51 & 2.02 & 1.5\\
+Iraq & 1.17 & 5.9 & 3.31 & 0.74 & 3.93 & 2.41 & 0.72 & 2.99 & 1.97\\
+Israel & 0.72 & 3.26 & 2.63 & 0.43 & 3.06 & 2.72 & 0.33 & 2.9 & 2.71\\
+\addlinespace
+Jordan & 1.13 & 6.11 & 3.95 & 0.71 & 3.74 & 2.68 & 0.4 & 2.36 & 1.87\\
+Kuwait & 1.37 & 5.2 & 3.12 & 0.46 & 2.52 & 1.84 & 0.25 & 2.01 & 1.65\\
+Lebanon & 0.85 & 3.65 & 2.7 & 0.52 & 2.31 & 1.87 & 0.26 & 1.94 & 1.71\\
+Libya & 1.31 & 6.64 & 4.06 & 0.3 & 2.63 & 1.94 & 0.14 & 1.92 & 1.57\\
+Morocco & 1.08 & 4.66 & 3.48 & 0.46 & 2.5 & 2.08 & 0.37 & 2.09 & 1.84\\
+\addlinespace
+Oman & 0.97 & 6.02 & 4.5 & 0.84 & 3.57 & 2.83 & 0.33 & 2.39 & 2.09\\
+Qatar & 1.34 & 5.51 & 3.91 & 0.7 & 2.99 & 2.37 & 0.32 & 1.64 & 1.41\\
+Saudi Arabia & 1.02 & 5.65 & 3.8 & 0.7 & 3.52 & 2.59 & 0.17 & 1.99 & 1.67\\
+State of Palestine & 1.1 & 6.14 & 4 & 1.18 & 4.79 & 3.36 & 0.7 & 3.05 & 2.37\\
+Sudan & 1.16 & 5.28 & 2.63 & 0.89 & 4.19 & 2.32 & 0.66 & 3.75 & 2.39\\
+\addlinespace
+Syrian Arab Republic & 1.21 & 6.08 & 4.08 & 0.75 & 3.54 & 2.71 & 0.47 & 2.42 & 2.02\\
+Tunisia & 0.77 & 4.29 & 3.07 & 0.32 & 2.22 & 1.8 & 0.19 & 1.97 & 1.71\\
+Turkey & 1.05 & 3.46 & 2.47 & 0.67 & 2.32 & 1.85 & 0.35 & 2.03 & 1.78\\
+United Arab Emirates & 1.3 & 5.1 & 3.52 & 0.56 & 2.22 & 1.68 & 0.17 & 1.56 & 1.38\\
+Western Sahara & 0.99 & 4.22 & 2.36 & 0.55 & 2.65 & 1.79 & 0.31 & 2.06 & 1.6\\
+\addlinespace
+Yemen & 0.92 & 5.65 & 2.97 & 1.21 & 4.94 & 2.46 & 0.65 & 2.83 & 1.61\\
+Oceania (exc. AUS and NZ) & 0.97 (0.1) & 4.4 (1.5) & 2.46 (0.3) & 0.7 (0.2) & 3.7 (1.2) & 2.22 (0.6) & 0.42 (0.3) & 2.93 (0.8) & 1.97 (0.7)\\
+Fiji & 0.93 & 3.44 & 1.38 & 0.82 & 2.93 & 1.42 & 0.61 & 2.53 & 1.52\\
+French Polynesia & 1.12 & 3.84 & 2.57 & 0.65 & 2.39 & 1.84 & 0.39 & 1.81 & 1.53\\
+Guam & 0.99 & 3.22 & 2.36 & 0.73 & 2.72 & 2.22 & 0.42 & 2.22 & 1.97\\
+\addlinespace
+Kiribati & 0.72 & 4.11 & 2.3 & 0.64 & 3.61 & 2.26 & 0.33 & 3.14 & 2.29\\
+Micronesia (Fed. States of) & 0.97 & 5.41 & 2.46 & 0.7 & 3.7 & 1.86 & 0.29 & 2.66 & 1.63\\
+New Caledonia & 1.02 & 3.48 & 2.38 & 0.54 & 2.47 & 1.97 & 0.29 & 1.91 & 1.66\\
+Papua New Guinea & 0.93 & 4.4 & 1.85 & 0.81 & 3.7 & 1.74 & 0.63 & 2.93 & 1.57\\
+Samoa & 1.01 & 5.68 & 3.48 & 0.67 & 4.28 & 3 & 0.47 & 3.45 & 2.69\\
+\addlinespace
+Solomon Islands & 0.91 & 5.29 & 3.21 & 0.96 & 4.37 & 2.89 & 0.89 & 3.63 & 2.64\\
+Tonga & 0.75 & 5.01 & 2.78 & 0.52 & 3.96 & 2.47 & 0.34 & 3.15 & 2.21\\
+Vanuatu & 1.02 & 4.81 & 2.52 & 0.89 & 4.04 & 2.41 & 0.69 & 3.3 & 2.24\\
+Sub-Saharan Africa & 1.02 (0.2) & 4.61 (0.7) & 2.07 (0.6) & 0.97 (0.2) & 4.17 (0.7) & 2.12 (0.6) & 0.79 (0.3) & 3.31 (0.7) & 1.92 (0.6)\\
+Angola & 1.29 & 4.64 & 1.85 & 1.25 & 4.79 & 2.35 & 1.08 & 4.33 & 2.38\\
+\addlinespace
+Benin & 0.8 & 4.56 & 2.28 & 1.01 & 4.29 & 2.18 & 0.86 & 3.69 & 2.02\\
+Botswana & 1.14 & 4.65 & 2.27 & 0.76 & 2.87 & 1.59 & 0.57 & 2.42 & 1.54\\
+Burkina Faso & 1 & 4.56 & 2.15 & 1.03 & 4.54 & 2.45 & 0.93 & 3.96 & 2.37\\
+Burundi & 0.85 & 5.15 & 2.47 & 0.89 & 5.2 & 2.94 & 0.75 & 4.18 & 2.66\\
+Cabo Verde & 0.95 & 5.02 & 3.12 & 0.9 & 2.85 & 1.87 & 0.56 & 1.91 & 1.42\\
+\addlinespace
+Cameroon & 1.12 & 4.45 & 1.72 & 1.16 & 4.26 & 1.91 & 0.88 & 3.6 & 1.91\\
+Central African Republic & 1.04 & 4 & 1.25 & 1.03 & 3.86 & 1.49 & 0.92 & 3.29 & 1.4\\
+Chad & 1.11 & 4.33 & 1.59 & 1.36 & 5.06 & 2.11 & 1.11 & 4.05 & 1.89\\
+Comoros & 0.86 & 5.12 & 2.53 & 0.84 & 4.18 & 2.16 & 0.67 & 3.23 & 1.8\\
+Congo & 1.05 & 4.59 & 1.97 & 0.93 & 3.97 & 2.02 & 0.89 & 3.58 & 2.02\\
+\addlinespace
+côte d'ivoire & 1.27 & 5.21 & 1.86 & 1.03 & 4.25 & 1.77 & 0.87 & 3.55 & 1.65\\
+Democratic Republic of the Congo & 1.07 & 4.62 & 2.23 & 1 & 4.9 & 2.64 & 1.03 & 4.18 & 2.3\\
+Djibouti & 0.58 & 4.88 & 2.74 & 0.52 & 3.41 & 2.17 & 0.23 & 2.16 & 1.59\\
+Equatorial Guinea & 0.99 & 3.71 & 1.47 & 1.12 & 4 & 1.73 & 1 & 3.17 & 1.46\\
+Eritrea & 0.81 & 4.46 & 2.28 & 0.9 & 4.2 & 2.47 & 0.68 & 3.3 & 2.2\\
+\addlinespace
+Eswatini & 1.15 & 4.78 & 1.53 & 0.91 & 3 & 1.24 & 0.7 & 2.36 & 1.1\\
+Ethiopia & 0.92 & 4.65 & 2.59 & 1.02 & 4.65 & 2.95 & 0.74 & 3.17 & 2.22\\
+Gabon & 1.02 & 3.99 & 1.85 & 1.09 & 3.9 & 2.06 & 0.72 & 3.28 & 2.04\\
+Gambia & 1.11 & 4.07 & 1.73 & 1.08 & 4.86 & 2.48 & 0.78 & 4.15 & 2.45\\
+Ghana & 1.05 & 4.74 & 2.16 & 0.83 & 3.77 & 1.97 & 0.61 & 3.12 & 1.87\\
+\addlinespace
+Guinea & 0.93 & 3.89 & 1.73 & 1.07 & 4.3 & 2.12 & 0.9 & 3.51 & 1.92\\
+Guinea-Bissau & 0.91 & 4.3 & 1.68 & 0.97 & 4.17 & 1.87 & 0.77 & 3.38 & 1.73\\
+Kenya & 1.42 & 5.72 & 2.67 & 1.03 & 3.98 & 2.25 & 0.73 & 2.77 & 1.78\\
+Lesotho & 0.88 & 4.19 & 1.21 & 0.79 & 2.82 & 1.05 & 0.71 & 2.39 & 1.05\\
+Liberia & 1.08 & 4.27 & 2.02 & 0.97 & 3.95 & 2.1 & 0.91 & 3.24 & 1.84\\
+\addlinespace
+Madagascar & 1.14 & 4.68 & 2.42 & 1.07 & 4.04 & 2.4 & 0.91 & 3.31 & 2.21\\
+Malawi & 1.06 & 4.39 & 2.06 & 1.11 & 4.3 & 2.53 & 0.98 & 3.19 & 2.1\\
+Mali & 0.94 & 3.96 & 1.76 & 1.13 & 4.72 & 2.29 & 1.11 & 4.15 & 2.07\\
+Mauritania & 0.96 & 4.95 & 2.5 & 0.81 & 4.27 & 2.33 & 0.67 & 3.64 & 2.19\\
+Mauritius & 0.76 & 2.56 & 1.51 & 0.52 & 1.85 & 1.27 & 0.26 & 1.39 & 1.1\\
+\addlinespace
+Mayotte & 1.57 & 6.8 & 5.06 & 0.96 & 4.5 & 3.68 & 0.66 & 3.11 & 2.69\\
+Mozambique & 0.96 & 3.87 & 1.57 & 1.06 & 4.15 & 2.11 & 1.03 & 3.73 & 2.17\\
+Namibia & 0.95 & 4.83 & 2.05 & 0.77 & 3.18 & 1.64 & 0.66 & 2.81 & 1.68\\
+Niger & 1.12 & 4.24 & 1.98 & 1.21 & 5.31 & 2.92 & 1.37 & 5.21 & 3.04\\
+Nigeria & 0.99 & 4.21 & 1.51 & 0.95 & 4.33 & 1.87 & 0.91 & 3.93 & 1.86\\
+\addlinespace
+réunion & 0.81 & 2.87 & 2.12 & 0.49 & 2.37 & 1.95 & 0.44 & 2 & 1.73\\
+Rwanda & 0.91 & 4.85 & 2.8 & 0.62 & 4.04 & 2.81 & 0.59 & 3.21 & 2.43\\
+Sao Tome and Principe & 1.18 & 5.17 & 2.79 & 1.06 & 4.48 & 2.88 & 0.9 & 3.68 & 2.68\\
+Senegal & 1.06 & 4.88 & 2.69 & 0.92 & 4.45 & 2.84 & 0.73 & 3.84 & 2.76\\
+Seychelles & 1.25 & 3.85 & 2.09 & 0.6 & 2.16 & 1.42 & 0.53 & 2.14 & 1.58\\
+\addlinespace
+Sierra Leone & 0.98 & 3.76 & 1.34 & 0.98 & 3.73 & 1.56 & 0.84 & 2.88 & 1.26\\
+Somalia & 0.68 & 4.72 & 2.2 & 0.91 & 4.79 & 2.27 & 0.97 & 4.27 & 2\\
+South Africa & 0.83 & 3.76 & 1.49 & 0.68 & 2.32 & 1.06 & 0.55 & 2.02 & 1.07\\
+South Sudan & 1.01 & 4.11 & 1.67 & 1.02 & 4.14 & 1.8 & 0.73 & 3.45 & 1.57\\
+Togo & 1.03 & 4.86 & 2.1 & 0.89 & 4.02 & 1.93 & 0.8 & 3.28 & 1.72\\
+\addlinespace
+Uganda & 1.18 & 4.83 & 2.1 & 1.26 & 5.14 & 2.76 & 1.01 & 3.61 & 2.16\\
+United Republic of Tanzania & 1.09 & 4.64 & 2.23 & 1.02 & 4.41 & 2.59 & 0.99 & 3.9 & 2.54\\
+Zambia & 1.22 & 4.93 & 2.08 & 1.08 & 4.45 & 2.38 & 0.95 & 3.74 & 2.27\\
+Zimbabwe & 1.32 & 5.24 & 1.76 & 0.82 & 3.09 & 1.4 & 0.78 & 2.94 & 1.53\\*
+\end{longtable}
+\endgroup{}
